--- a/fu/athena/languages/Italian/components.txt
+++ b/fu/athena/languages/Italian/components.txt
@@ -1,1 +1,677 @@
-敐汬⁥楤䄠瑮步ൡ倊敩牴⁡⁡楤捳൯䴊湩牥污⁥敦牲൯伊獳⁯潭瑳潲瀠捩਍敐汬⁥畂汬慦杮൯倊汥敬搠⁩敋扬൩䴊湩‮慍档污瑩൥匊慣汧慩䬠瑵䬭൵娊湡慮嘠汥捯灩敲൹吊獥档潩椠湧瑯൯倊汥敬䈠慬杮൯匊慣汧慩䜠慩牰祥਍潃湲⁡楤䄠瑮步ൡ䌊楲瑳污潬琠牥慲਍潃整਍畇捳潩搠⁩慢捣ൡ䤊癮汯‮獯潳瀠捩മ匊⹣嘠汥捯灩敲൹倊汥敬嘠汥捯灩敲൹䤊獮瑥潴挭牡数瑮മ䄊慬嘠獥潰摩਍潃慲空⁡敖灳楯൤䌊楲瑳‮楤氠捵൥吊獥慴䠠牯敮慴牵਍潃⹲䠠牯敮慴牵਍敐汬⁥楶牢湡整਍汆極潤搠⁩潭瑳潲਍敐汬⁥敇摮潲敭਍捓条楬⁡敇灮敲൹匊慣汧慩䤠灯敲൹倊汥敬䤠灯敲൹伊敲捣楨⁯畋⵴畋਍潃慲空⁡畋⵴畋਍敍扭慲慮䬠瑵䬭൵倊湩慮䌠灥慨潬൳匊慣汧慩䌠灥慨潬൳倊汥敬䌠湯慧慬慬਍牁楴汧潩愠晦汩മ倊汥敬朠浯潭慳਍楐瑥慲愠瑮獩瑥⹴਍敐汬⁥敇灮敲൹伊獳⁯慰汬摩൯倊汥敬瘠穩慺਍牁⹴䠠牥業慴牵਍潃⹲䠠牥業慴牵਍捓条楬⁡汐獥潩桴਍牁潲慷慮戠浯慢਍畇捳潩愠慲⹧瀠捩਍楐湮⁡汐獥潩桴਍潃⹲䬠瑵䬭⁵汢൵倊汥敬朠浯⹭楶汯മ倊汥敬猠摥捵湥整਍捓‮汐獥潩桴瘠摲਍楐湮⁡汐獥‮牶൤䌊牯穡慺䈠獡牡潩൳匊潧扭潲挭汯整汬൯䌊牯穡慺䴠湯扯潬൳䌊牯潮爠獳猠湡畧൥伊敲捣楨⁯慇畲慧਍敂捣⁯灡異瑮瑩൯䌊牯穡慺䜠牡杵ൡ䌊楲楮牥⁡慇畲慧਍慂晦⁯求湡潧杮ൡ倊汥敬䈠慬杮湯慧਍獏潳洠獯牴⁯牧਍敐⹬嘠汥捯摩潲敭਍牁⹴䌠慥慮慴牵਍潃⹲䌠慥慮慴牵਍潃⹲敃湡瑡畡⁲捰਍捓牡晡愮獳獡楳潮਍捓条楬⁡慒桴慩൮䌊牯穡慺删瑡楨湡਍潃⹲整捳⹨楔牧硥਍捓条楬⁡楔牧硥਍潃慲空⁡楔牧硥਍汁⁡慒桴污獯਍捓条楬⁡慒桴污獯਍楍⹮䐠慲潧楮整਍潃湲⁯潣瑮牯潴਍潃慲空⁡楄扡潬൳伊獳⁯潭瑳潲ഫ䌊牯穡慺䜠慲楶獯਍潃⹲整捳⹨片癡മ䌊‮潣瑮‮求獯渠൲䌊牯‮求獯渠牥൯䌊牯‮片癡潩⁳牮਍敔捳⹨片癡潩⁳牮਍畆杮⁯慣獯਍畆杮⁯慰慲楬楳਍畂湯偯瑳汆⹮潮浲਍湉敳瑴ⵯ楤൯倊汥敬䴠獯睳湩൥䈊汯潬愠椠灭潲瑮ൡ吊獥慴䈠汵晬湡潧਍敐汬⁥畂汬牤浯൥伊獳⁯楧慧瑮൥吊獥档潩䜠慩牤浯൥倊汥敬搠⁩楇灡敲൹䴊湯瑥⁡畋⵴畋਍敔瑳⁡敖潬楣牤മ䴊湯瑥⁡潃杮污污ൡ匊捡慣昭慩浭ൡ䔊敬瑴潲慳捣ൡ匊灵牥畳捣൯倊牥慬渠牥ൡ䄊慬䈠獡牡潩൳䄊慬䠠牯敮慴牵਍畂湯⁯潐歫൥䌊楲瑳‮桧慩捣潩਍牃獩⹴搠⁩楶慴਍汅杯潩䜠਍畒⹢瀠汥⁯敆祬敮਍片汩潬椠灭牥瑡മ䈊潵潮獐䙴湬倮畬൳倊敩牴⁡潦慣慩਍敐捳⁥潧牵敭൴吊獥档潩䜠湥牤浯൥娊湡慮搠⁩祷敶湲਍潍敮慴䬠敨畺਍潍⹮夠慩⁮慇畲慧਍畂湯⁯楃瑮渮牥ൡ䴊湯瑥⁡桓杯湵਍灓‮潤獲‮慇牯湥਍湅潣業൯䐊獯楢捳獵਍潍敮慴吠杩敲൸䴊湯瑥⁡楄扡潬൳吊獥档潩䤠摯潲敭਍潍敮慴䐠楡祭൯吊獥档潩删浥扯慲਍汆極潤眠癹昮潵潣਍牅慢吠慲潭瑮൯䘊潩敲搠⁩慣瑣獵਍慃灲⁡牰浩癡牥ൡ吊湯潮猭楰汬൯䰊扩潲挠浯潢ㄠ਍畂湯⁯祈湰൯倊汥敬祈湰䅯慲据ഫ娊湡慮䠠灹潮਍敐捳ⵥ潳湮൯䄊瑲杩楬䡯灹潮潔൰䔊扲⁡潳潰楲敦慲਍片‮潭捳ⵡ潣湲൯䠊牥畣牤浯൥䤊獮瑥潴琭潵潮਍楐瑥慲漠捳牵ൡ倊穥潺漠捳牵൯䄊瑮捩⁡潰楺湯൥匊潴晦⁡楳楮瑳慲਍敐汬⁥⁡瑳楲捳൥娊湡慮搠⁩求獯਍獏潳搠慲潧愠穮മ䈊潵潮䰠癡獡潩桴਍捓条灓䱥癡獡潩桴਍楐湮灓慌慶楳瑯⭨਍敐汬⁥桃浡汥潥൳䴊浥牢‮桃浡汥潥൳倊慩瑳慲删瑡楨湡਍潃湲⁯楤䐠潡慲਍潃慲空⁡楤䐠潡慲਍敐汬⁥楋楲൮䌊牯潮䬠物湩਍牃湩敩慲䬠物湩਍畍捳楨⁯楤搠慲潧਍敌湧⁯楤搠慲潧਍楐獡牴⁡慒桴污獯਍捓条楬⁡慌ⵯ桓湡਍潃湲⁯慌ⵯ桓湡਍潃湲⁯慭獥潴潳਍牃湩敩慲界慮瑳慲਍敍扭⹲牄条景潵潣਍慓杮敵搠慲潧愠穮਍潃慲空⁡慇牯湥਍潃湲⁯楤吠潥瑳慲਍捓汧䐠慲潧映潵潣਍搨浵祭䬩湩⁧潌獢整⁲桓൬⠊畤浭⥹慆業獴⁵楔正瑥਍牃⁮潍潮汢獯戠据਍灓搮䴮湯扯⹬戠据਍潃⹲潍潮汢獯戠据਍潃⹲慒桴慩⁮潲慳਍捓‮慒桴慩⁮潲慳਍畐瑮⁡慒桴慩൮䄊慬删瑡慨潬⁳穡ൺ匊⹣删瑡慨潬⁳穡ൺ䌊牯刮瑡慨潬⁳穡ൺ倊汥敬愠瑬⁡畱污മ倊汥敬䈠慬杮⭯਍湉⹳䄠捲扯污湥൯倊汥敬䈠汵摬潲敭ഫ䴊湩‮慃扲污瑩൥匊慣慲敢⁯楧慧瑮൥吊獥档潩洠敡瑳潲਍獏潳爠扯獵潴਍捓‮敖潬楣牰祥ഫ倊汥‮敖潬楣牰祥ഫ䄊慬椠瑮‮敖灳楯൤䌊牡灡捡⁥敖灳楯൤䈊潲潤搠⁩潭瑳潲਍潎慶牣獩慴汬൯匊慣汧慩搠⹲慄牯ൡ䄊慬椠瑮䠮牯敮⹴਍慃慲⹰䠠牯敮慴牵਍捓条楬⁡敇灮敲⭹਍敐汬⁥敇灮敲⭹਍慓捣⁡慰慲楬空മ匊慣汧慩䤠灯敲⭹਍敐汬⁥潉牰祥ഫ匊捡慣搠⁩潴獳湩ൡ伊⹲氠湵潧䬠瑵䬭൵䌊牡灡捡⁥畋⵴畋਍敐汬⁥楤䌠湯慧ഫ匊⹣䌠灥慨潬⭳਍楐湮⁡敃桰污獯ഫ倊汥敬䌠湯慧慬慬ഫ䄊瑲‮潃杮污污⭡਍敐汬⁥潧浭獯⭡਍敔瑳⁡祇捰牥獯਍潃慤搠⁩敇摮潲敭਍敐汬⁥潣据䬮敨畺਍獏潳洠獯牴⁯畤潲਍牁⹴䠠牥業慴牵ഫ䌊牡灡‮效浲瑩畡൲䌊牯琮獥档潩眠癹മ倊汥敬祈湰䅯慲据਍楐浵⁡牡潣慢敬潮਍敂捣⁯祈湰൯䰊捡楲敭䈠獡牡潩൳䌊牡灡‮慂慳楲獯਍捓条楬⁡畋⵴畋ഫ匊汣䬠瑵䬭⁵汢⭵਍捓‮汐獥潩桴ഫ倊湩慮倠敬楳瑯⭨਍潔慲散䴠湯扯潬൳䜊慲⁮潣湲⁯潲獳൯䌊牡灡捡䵥湯扯潬൳䌊汥慬搠⁩畦捯൯伊敲⹣界杮䝯牡杵ൡ䈊捥潣䘠敲捳൯䌊牡灡捡⁥慇畲慧਍敐汬⁥求湡潧杮⭡਍慚湮⁡求湡潧杮⭡਍獏潳戠畲潴਍慃慲⹰䌠慥慮慴牵਍牁⹴䌠慥慮慴牵ഫ匊慣汧慩删瑡楨湡ഫ䌊牡灡捡⁥慒桴慩൮匊楰敮挠摯⁡慎杲ൡ匊慣汧慩丠牡慧ഫ䴊摩汯潬汁乬牡慧਍牁楴汧潩吠杩敲⭸਍慚湮⁡楤吠杩敲⭸਍畒楢潮删瑡慨潬൳匊⹣删瑡慨潬⭳਍慃慲慰散䐠慩汢獯਍慒潲猠慣慲敢൯䌊牡灡捡⁥片癡潩൳倊汥敬䜠慩牰祥ഫ䴊湩‮牡潣慢敬潮਍捓条楬⁡楇灡敲⭹਍慃慲⹰畋⵴畋戠畬਍捓‮敃桰挮牯污潬਍楐湮⁡敃桰‮潣⹲਍汁⁡祇捰‮楶汯മ䴊浥牢湡⁡敳畤⹣਍楂瑳䬠敨畺瀠污⹬਍敐捳ⵥ潤慲潴瀠捩਍捓汧倠敬⹳瘠摲ഫ倊湩慮汐獥瘮牥敤ഫ䌊牡灡‮求獯渠牥൯䌊牡‮片癡潩⁳牮਍畂湯⁯獅数瑲൯䴊湯瑥⁡楋楲൮䴊湯瑥⁡楤映潵潣਍敍扭慲慮䘠瑡污獩਍潐癬䐮慲潧映潵潣਍慃慲慰散䐠潡慲਍搨浵祭伩敮䠭牯敮呤捩敫൴⠊畤浭⥹楐慲整䨠吠捩敫൴䌊牡灡捡⁥敔獯牴ൡ倊汥敬删浥扯慲ഫ䌊牯潮搠⁩慒慪杮਍敐汬⁥慒慪杮搠牯਍敐汬剥橡湡⁧敮潲਍捓汧搠⹲䐠潡慲ഫ匊捵潣䤠獮⴮畴湯൯匊捡慣椭普牥潮਍敐汬⁥桃浡汥潥⭳਍楇楯汥潬䌠慨⹭਍楇楯汥潬䐠潡慲਍敐汬⁥楤䬠物湩ഫ䌊牯潮䬠物湩愠空മ匊⹣䰠潡匭慨⭮਍牁⹴䰠潡匭慨൮䌊牡灡捡⁥慇牯湥਍潔慲散䜠潡敲൮䌊牯潮吠潥瑳慲ഫ匊杣䑬慲潧映潵潣ഫ䜊潩敩汬䑯⹲畦捯൯伊捣楨⁯慆慴楬൳匊慣汧慩䘠瑡污獩਍潃湲⁯慆慴楬൳䴊摩愮汬眮癹昮潵മ䄊瑲杩楬⁯歁湡潴൲䌊牯穡慺䄠慫瑮牯਍捓条楬⁡歁湡潴൲倊敩牴ⵡ祷敶湲਍敐捳⁥潧牵敭⭴਍慃⹲慒桴污獯愠杲਍楍敮慲敬唠楮湯਍潍敮慴删橡湡൧倊汩潬慬愭浲瑡牵ൡ吊湯潮氭湡楣ൡ吊牯捡䵥湯扯楂湡਍慃慲䵰湯扯潬䉳慩਍片湡潃湲偯慬楴潮਍慃慲⹰删瑡⹨潲慳਍捓刮瑡楨湡爠獯⭡਍畐瑮⁡慒桴慩⭮਍慃⹲慒桴污獯愠空਍慃⹲慒桴慩⁮潤⹲਍捓汧慒桴慩⁮潤⭲਍畒楢潮删瑡楨湡਍汁⁡慒桴污獯愠杲਍潃⹲䰠潡匭愠空മ䌊湲䰠潡匭慨⁮穡ൺ伊捣⹨慭癬慆慴楬൳匊⹣挠敲⁭慆慴楬൳䌊湲挠敲⁭慆慴楬൳匊杣⁬慆慴楬⁳湢ൣ䌊牯潮慆慴楬⁳湢ൣ伊敲䙣牯畴䭮瑵䬭൵䌊牯穡慺敐䭳瑵䬭൵䄊慬映牯整䬠瑵䬭൵倊汥畄䍲湯慧慬慬ഫ䄊瑲畄䍲湯慧慬慬ഫ倊汥敬朠浯⹭灳捥ഫ吊獥䑴牵䝡灹散潲൳䌊楲瑳污異潲਍敐汬䭥敨畺挠敲慭਍獏潳潍瑳潲敐慳⹮਍獅敳穮⁡潭瑳潲਍牁䑴牵䡯牥業慴牵਍潃偲獥效浲瑩畡൲䜊獡牴汯瑩䡥灹潮ഫ匊慣汧匮⹰䬠瑵䬭൵䌊牯穡敐䉳獡牡潩൳䘊牯整汁䉡獡牡潩൳倊獥散愠瑮捩൯䴊湩‮汅慴楬整਍捓条灓獥汐獥潩桴਍楐湮卡偰敬楳瑯⭨਍慚湮偡獥楐捳湩൥䴊湩‮敍汬湡敪਍潃慲䑺牵䝡牡杵ൡ倊汥敬牁䝧牡杵ൡ倊汥䑬䉲慬杮湯慧ഫ娊湡偮獥求湡潧杮ൡ䄊瑲杩楬⁯数晲牯മ䌊牯敃湡瑡畡偲獥਍牁䑴牵敃湡瑡畡൲匊慣卧数剳瑡楨湡਍潃慲偺獥慒桴慩൮匊楰偮獥潃慤慎杲ൡ匊慣汧慩灓獥慎杲ൡ匊慣汧敃敬乳牡慧਍潃慲敐䱳癡獡潩桴਍敐汬灓捥敒潭牢⭡਍牁楴䑧牵呯杩敲൸匊慣敃敬瑳呥杩敲൸匊慣䑧牵剡瑡慨潬൳䄊慬潆瑲慒桴污獯਍捓䍡汥獥慒桴污獯਍潃慲偺獥楄扡潬൳䌊牯潮畄潲瑁潴捲਍慆晲污慬慆瑮獡慭਍潃慲偺獥片癡潩൳䴊摩愮汬䜮慲楶獯਍潃偲獥畋⵴畋求൵倊汥敬潃杮污污卡ഫ䌊敲瑳⁡楖牢湡整਍牁楴䑧牵潃杮卡਍汁䑩牵健牯䝰灹散਍潆瑲䅥慬晁慦捳湩਍慔汧潩灓捥桋穥൵倊汯敶敲搠⁩楶慴਍牁楴䑧楡祭噯潩慬਍潃慲䑺楡祭噯潩慬਍捓条灓獥汐獥潩牖਍楐湮卡偰敬楳⭯牖਍敐汬求湡潧杮剡⬮਍慚湮敐䉳慬杮副മ䌊牯敃湡瑡呲牥慲਍牁䍴慥慮牴敔牲ൡ倊牥慬渠牥⁡楧慧മ䌊牯穡敐乳牥䉡潬൳䌊牯乮牥畄䅲瑴牯ൣ䜊慲偮敩牴坡癹牥൮䌊牯敐䝳慲楶獯敎൲䌊牯潮畄潲慒慪杮਍敐汬剥橡湡乧牥⭯਍捓条牄卡数䑳潡慲਍敐汬剥橡湡佧潲ഫ匊慣灓獥慒桴佮潲਍牁楴汧潩慌卯求൵䴊湯瑥⁡獅数瑲⁯േ䴊湯瑥⁡畧牥楲牥േ倊汥敬猠数⹣楋楲൮䴊湯瑥⁡敬杧湥慤േ䔊潬楧⁯൓䜊汥瑡湩⁡畴湯൯匊捡慣畆捯䙯汵൧倊汥敬灓捥桃浡汥ഫ䜊潩敩䝬䑲慲潧湁ൺ䌊牯穡敐慳䑮潡慲਍潃湲⁯畤潲䐠潡慲਍獏潳片牄条䅯穮慩਍牃湩敩慲倠慬楴潮਍捓卡数牄条䙯潵潣਍慃慲慰散界慮瑳慲਍潃慲空⁡界慮瑳慲਍潃慲偺獥湡慇牯湥਍灓湩潄偲獥慇牯湥਍潃湲畄䍲慨敭敬獯਍潃慲䍺汥獥慇牯湥਍潃湲䑯牵敔獯牴ൡ䴊獵档潩牄条䅯瑮਍敌湧䑯慲潧湁楴潣਍汆極潤夠吮畳慫業਍捏档潩慍䙬瑡污獩਍捓条灓獥慆慴楬൳䌊牯潮畄潲慆慴楬൳倊湩䙮牯整歕湡潬൳䌊牯穡敐啳慫汮獯਍潃偲獥湡慌ⵯ桓湡਍楐瑥慲唠慫汮獯਍楌牢⁯潣扭⁯വ䌊牯敐剳瑡湨潒慳਍捓卡数剳瑡湨潒慳਍灓湩⁡慒桴慩൮䌊牯敐剳瑡汨䉳畬਍潃偲獥慒桴佮潲਍灓湩剡瑡楨湡牏൯匊慣汧敐剳瑡楨湡਍潃偲獥慒桴獬牁൧匊慣敃敬䱳潡匭慨൮䌊牯敐䙳瑡污獩牃൥䌊牯潮畄䙲瑡污獩ൃ匊慣卧数䙳瑡污獩ൂ䌊牯潮畄䙲瑡污獩ൂ倊汥敬䜠慩牤浯൥匊捡慣搠⁩敶敬潮਍敐汬⁥楤䌠湯慧਍潃⹲效浲瑩畡⁲捰਍慚湮⁡楤倠獩楣敮਍捓⹬䬠瑵䬭⁵汢൵匊楰慮搠䴮湯扯潬൳匊慣汧慩䜠牡杵ൡ䄊慬䜠牡杵ൡ娊湡慮搠⁩楔牧硥਍牁楴汧潩吠杩敲൸䴊浥牢‮慒桴污獯਍潃慲空⁡慒桴污獯਍灓湩⁡⹤䐠慩汢獯਍敐汬⁥潉牤浯൥匊楰慮搠‮求獯渠൲䴊湯瑥⁡求湡潧杮ൡ䈊潵潮䄠楮慭挠捡ൣ䌊牡敮挠污慤਍敐汬⁥楤删浥扯慲਍摅牥ൡ䄊牲睯湡ⵡ捳灯楰൯娊湡偮獥慌慶楳瑯൨䴊浥牢湡⁡慄牯ൡ䌊牯穡慺䰠潡匭慨൮䌊楲楮牥⁡敔獯牴ൡ䌊潵敲䴠湯扯潬൳䄊瑲眮癹牥⁮畦捯൯䄊瑲杩楬⁯祈湰⭯਍慇瑳潲楬整祈湰൯匊慣汧慩䜠牡杵⭡਍敐汬⁥敮慲丠牡慧਍慚湮⁡慎杲捡杵⭡਍慃慲慰散吠杩敲൸䌊牡灡‮慒桴污獯਍潔慲散䐠慩汢獯਍慓捣⁡潳潰楲敦慲਍潔慲散䈠潬⁳敮潲਍搨浵祭䘩浡瑩畳䤠癮楯散਍畂湯⁯慣捣慩潴敲਍捓条楬⁡楔牧硥ഫ䴊摩汯潬眠癹昮潵മ䌊牡灡‮慌ⵯ桓湡਍潃慲空⁡慆慴楬൳娊湡慮搠⁩歁湡潴൲䘊湵潧猠数楺瑡൯吊湯潮札獡牴湯浯൯匊⹣慒桴污獯愠空ഫ匊杣⁬慒桴污愮杲ഫ䌊摯⁡楤䰠湵獡牴ൡ䌊牯挮敲⁭慆慴楬൳䌊牯‮慆慴楬⁳湢ൣ伊獳副扯獵祗敶湲਍慓捣噡汥湥䵯牯൴匊慣汧灓獥慇畲慧਍汁⁡潦瑲⁥慇畲慧਍獏潳洠獡楳捣潩਍敐汬⁥敮慲慎杲⭡਍慚湮敐乳牡慧畣慧਍潃慲偺獥湡楔牧硥਍慚湮偡獥湡楔牧硥਍潃慲偺獥慒桴污獯਍灓䑮牯敐䑳慩汢獯਍慓捣卡湯潮牐景਍捓⹡灓䬮瑵䬭䉵畬਍敐卬数䉳汵晬湡潧਍畃楯⁯敐慬畧൳匊楰慮敐乳牥䉡潬൳䌊牯敃䝬慲楶獯敎൲⠊畤浭⥹慆業獴卵捰慩呬瑫਍潍敮慴楃瑮敎慲േ䈊潵潮䈠牵瑡⹴灳മ䄊瑲杩畄割橡湡൧娊湡慮敐剳橡湡൧䄊慬䘠牯整䐠潡慲਍潃慤敐呬潵䭮物湩਍灓湩⁡界慮瑳慲਍潃慲偺獥敔獯牴ൡ䘊汩瑥慙慭獔歵浡൩䌊牯穡敐䙳瑡污獩਍汁䙡牯整慆慴楬൳䴊湡楤偢污啡湫潬൳匊瑯潴捓条歕湡潬൳匊慣灓獥慒桴獬求൵匊慣灓獥慒桴獬牁൧匊慣灓䙥瑡污獩牃൥䌊牯穡敐䙳瑡污獩ൂ娊湡慮䜠湥牰祥਍慚湮⁡潉牰祥਍潃慤䜠牡杵ൡ倊湩慺䌠慥慮慴牵਍潃慤删瑡慨潬൳䄊瑲汧‮楇摡潲敭਍牁⹴嘠汥捯摩潲敭਍潍敮慴倠敬楳瑯൨䴊湯‮敃桰摡潲敭਍楐湡慴搠⁡楬普ൡ上瑵楲湥楴਍牁⹴䌠慨敭敬獯਍牁楴汧潩䐠潡慲਍楐穮⁡楤䜠潡敲൮䌊牯穡慺吠潥瑳慲਍牁⹴䐠慲潧映潵潣਍潃慤慒桴污獯愠空਍牁⹴敖潬楣牤浯⭥਍摁潤敭嘠獥潰摩਍潃慤䈠慬杮湯慧਍潃慤搠⁩慒慪杮਍慓捣ⵡ畴湯൯倊湵慴䌠慨敭敬獯਍牁⹴愠晦‮慄牯ൡ䴊湯瑥⁡片癡潩൳䴊来⁡敐汬ⵥ牡⹭਍潃慤慒桴污獯愠杲਍汁⁡牣浥䘠瑡污獩਍敍扭䙲瑡污獩戠据਍潃慤敐汬䝥牡杵ൡ䌊摯䍡潵潩求湡潧਍慇䍭慥慮慴牵敐൳匊慣卧数獳呡杩敲൸䌊牯敃敬䝳慲楶獯਍慓捣⁡畦浬湩൥䌊摯䍡潵潩求湡潧൒䄊瑲杩畄潲慇牯湥਍牁䑴牵牄条䙯潵潣਍敐汬奥浡呡畳慫業਍牁噴湡慧歕湡潬൳䌊摯偡汥慒桴獬牁൧䄊慬潆䙲瑡污獩潒൳䄊慬潆瑲䙥瑡污獩ൂ伊獳⁯潭瑳潲洠摥਍慚湮⁡潃杮污污ൡ䌊牡敮映敲摤ൡ倊汥敬愭浲瑡牵ൡ䔊瑳慲瑴⁯慰汬摩൯䜊⹲挠捯楣敮汬ൡ䌊摯⁡桃浡汥潥൳䌊牯潮䰠湵獡牴ൡ䤊癮汯‮獯潳朠⹲਍慚湮⁡畂汬牤浯൥䄊慬敆摮湥整慎杲ൡ䄊瑲杩楬⁯慇牯湥਍畐瑮⁡楤䄠慫瑮牯਍慂捣⁡桧慩捣慩慴਍牁䑴牵坯癹畆捯൯䄊慬潆瑲敆摮慎杲ൡ娊湡剮扯敐慬畧൳䌊摯偡汥桃浡汥潥൳䌊摯偡獥湡歕湡潬൳匊慣灓獥慌ⵯ桓湡਍慚灭⁡敃湡瑡畡൲吊獥牯⁯桓歡污歡ൡ䔊扲⁡湡楴潤潴਍浉畭楮空瑡牯൥吊湯潮札楨瑯潴敮਍敍慧䐠潲慧搠浥മ⠊畤浭⥹慆業獴⁵呐吠正൴䔊敲楤썴₠桓歡ൡ䌊摯⁡畴湯⁯楋楲൮倊穯潩敮洠硡਍畒楢潮䰠潡匭慨൮䜊䍲牯穡牁条獯慴਍汁䙡牯䍴慨敭敬獯਍畓数獲浥൥䜊潩敩汬⁯畓歩൯䐊潲慧搠浥湯慩慣਍楇楯汥潬䄠楫潴਍汇⁬慌楰汳穡畺楬਍汇⁬慃灭⁯慢瑴മ䌊牯湯噡獥潰摩敒൧䴊摥捩湩⁡楤攠扲൥䤊獮瑥慴慭潲਍敂⹶攠敮杲瑥捩ൡ匊灵牥楰汬汯ൡ娊湡慮䈠慬杮湯慧਍潃慤䈠潬⁳敮潲਍灓敬摮摩⁯敢捣൯倊獥散爭浯潢਍牁⹴䌠湯慧慬慬਍⁐潎浲污⁥癌ള倊倠牥潦慲瑮⁥癌ള倊倠污潬瑴汯⁡癌ള倊倠捩潣䰠㍶਍⁐片灡潰潬䰠㍶਍潓瑳湡慺䔠敮杲മ匊獯慴穮䅡瑴慒癶਍潓瑳湡慺嘠汥湥൯匊獯慴⹮倠牡污獩൩匊獯慴穮⁡潓湮൯䰊来潮搠⁩牤条⭯਍潃湲⁯楤䬠汥楢਍牔灡⹰愠猠潣獳ൡ䈊獩⹴戠湥挠瑯慴਍楂瑳捥慣朠畯浲瑥਍慃湲⁥牢捵慩慴਍敍慧猭捵潣਍潃慤搠⁩慄牯ൡ䜊獵楣⁯牡条‮牧਍慒慮搠污慬挠摯ൡ䘊汥楶敮਍慃慴楬空瑡牯൥䄊慬慒潳潩敖灳楯൤匊灵牥獥牴瑡潴਍牅慢映潵潣਍敓敭䐠慲潧਍⁐牄条൯䄊慬慒潳潩潈湲瑥਍畆杮ⵯ楮牴൯䤊獮‮慳瑬牥湩൯䈊潯敭慲杮਍汆畡潴਍畆杮⁯瑳浩汯湡整਍敍慧瀠捩潣敮਍敍慧爠瑥൥吊獥牯卯慨慫慬慫ഫ刊瑥൥䄊瑴敲空⁯牴灡⹰਍潕潶搠愧捣慩潩਍潕潶搠漧潲਍片汩潬਍湉敳瑴ⵯ慰慴慴਍獐捩獯敩潲਍楂潮潣潬਍楍汥൥䘊慬瑵⁯慓畬整਍潐癬牥⁥慤猠慰潲਍畂湯⁯潣灭条潮਍
+Pelle di Anteka
+Pietra a disco
+Minerale ferro
+Osso mostro pic
+Pelle Bullfango
+Pelle di Kelbi
+Min. Machalite
+Scaglia Kut-Ku
+Zanna Velociprey
+Teschio ignoto
+Pelle Blango
+Scaglia Giaprey
+Corna di Anteka
+Cristallo terra
+Cote
+Guscio di bacca
+Invol. osso pic.
+Sc. Velociprey
+Pelle Velociprey
+Insetto-carpent.
+Ala Vespoid
+Corazza Vespoid
+Crist. di luce
+Testa Hornetaur
+Cor. Hornetaur
+Pelle vibrante
+Fluido di mostro
+Pelle Gendrome
+Scaglia Genprey
+Scaglia Ioprey
+Pelle Ioprey
+Orecchio Kut-Ku
+Corazza Kut-Ku
+Membrana Kut-Ku
+Pinna Cephalos
+Scaglia Cephalos
+Pelle Congalala
+Artiglio affil.
+Pelle gommosa
+Pietra antisett.
+Pelle Genprey
+Osso pallido
+Pelle vizza
+Art. Hermitaur
+Cor. Hermitaur
+Scaglia Plesioth
+Arrowana bomba
+Guscio arag. pic
+Pinna Plesioth
+Cor. Kut-Ku blu
+Pelle gomm.viol.
+Pelle seducente
+Sc. Plesioth vrd
+Pinna Ples. vrd
+Corazza Basarios
+Sgombro-coltello
+Corazza Monoblos
+Corno rss sangue
+Orecchio Garuga
+Becco appuntito
+Corazza Garuga
+Criniera Garuga
+Baffo Blangonga
+Pelle Blangonga
+Osso mostro gr
+Pel. Velocidrome
+Art. Ceanataur
+Cor. Ceanataur
+Cor.Ceanataur pc
+Scaraf.assassino
+Scaglia Rathian
+Corazza Rathian
+Cor.tesch.Tigrex
+Scaglia Tigrex
+Corazza Tigrex
+Ala Rathalos
+Scaglia Rathalos
+Min. Dragonite
+Corno contorto
+Corazza Diablos
+Osso mostro+
+Corazza Gravios
+Cor.tesch.Grav.
+C. cont. Blos nr
+Cor. Blos nero
+Cor. Gravios nr
+Tesch.Gravios nr
+Fungo caos
+Fungo paralisi
+BuonoPstFln.norm
+Insetto-dio
+Pelle Mosswine
+Bollo a impronta
+Testa Bullfango
+Pelle Bulldrome
+Osso gigante
+Teschio Giadrome
+Pelle di Giaprey
+Moneta Kut-Ku
+Testa Velocidr.
+Moneta Congalala
+Sacca-fiamma
+Elettrosacca
+Supersucco
+Perla nera
+Ala Basarios
+Ala Hornetaur
+Buono Pokke
+Crist. ghiaccio
+Crist. di vita
+Elogio G
+Rub. pelo Felyne
+Grillo imperat.
+BuonoPstFln.Plus
+Pietra focaia
+Pesce gourmet
+Teschio Gendrome
+Zanna di wyvern
+Moneta Khezu
+Mon. Yian Garuga
+Buono Cint.nera
+Moneta Shogun
+Sp. dors. Gaoren
+Encomio
+Dosbiscus
+Moneta Tigrex
+Moneta Diablos
+Teschio Iodrome
+Moneta Daimyo
+Teschio Remobra
+Fluido wyv.fuoco
+Erba Tramonto
+Fiore di cactus
+Carpa primavera
+Tonno-spillo
+Libro combo 1
+Buono Hypno
+PelleHypnoAranc+
+Zanna Hypno
+Pesce-sonno
+ArtiglioHypnoTop
+Erba soporifera
+Gr. mosca-corno
+Hercudrome
+Insetto-tuono
+Pietra oscura
+Pezzo oscuro
+Antica pozione
+Stoffa sinistra
+Pelle a strisce
+Zanna di Blos
+Osso drago anz.
+Buono Lavasioth
+ScagSpeLavasioth
+PinnSpLavasioth+
+Pelle Chameleos
+Membr. Chameleos
+Piastra Rathian
+Corno di Daora
+Corazza di Daora
+Pelle Kirin
+Corno Kirin
+Criniera Kirin
+Muschio di drago
+Legno di drago
+Piastra Rathalos
+Scaglia Lao-Shan
+Corno Lao-Shan
+Corno maestoso
+CrinieraLunastra
+Membr.Dragofuoco
+Sangue drago anz
+Corazza Gaoren
+Corno di Teostra
+Scgl Drago fuoco
+(dummy)King Lobster Shl
+(dummy)Famitsu Ticket
+Crn Monoblos bnc
+Sp.d.Monobl. bnc
+Cor.Monoblos bnc
+Cor.Rathian rosa
+Sc. Rathian rosa
+Punta Rathian
+Ala Rathalos azz
+Sc. Rathalos azz
+Cor.Rathalos azz
+Pelle alta qual.
+Pelle Blango+
+Ins. Arcobaleno
+Pelle Bulldrome+
+Min. Carbalite
+Scarabeo gigante
+Teschio maestro
+Osso robusto
+Sc. Velociprey+
+Pel. Velociprey+
+Ala int. Vespoid
+Carapace Vespoid
+Brodo di mostro
+Novacristallo
+Scaglia dr.Daora
+Ala int.Hornet.
+Carap. Hornetaur
+Scaglia Genprey+
+Pelle Genprey+
+Sacca paralizz.
+Scaglia Ioprey+
+Pelle Ioprey+
+Sacca di tossina
+Or. lungo Kut-Ku
+Carapace Kut-Ku
+Pelle di Conga+
+Sc. Cephalos+
+Pinna Cephalos+
+Pelle Congalala+
+Art. Congalala+
+Pelle gommosa+
+Testa Gypceros
+Coda di Gendrome
+Pelle conc.Khezu
+Osso mostro duro
+Art. Hermitaur+
+Carap. Hermitaur
+Cor.teschio wyv.
+PelleHypnoAranc
+Piuma arcobaleno
+Becco Hypno
+Lacrime Basarios
+Carap. Basarios
+Scaglia Kut-Ku+
+Scl Kut-Ku blu+
+Sc. Plesioth+
+Pinna Plesioth+
+Torace Monoblos
+Gran corno rosso
+CarapaceMonoblos
+Cella di fuoco
+Orec.LungoGaruga
+Becco Fresco
+Carapace Garuga
+Pelle Blangonga+
+Zanna Blangonga+
+Osso bruto
+Carap. Ceanataur
+Art. Ceanataur+
+Scaglia Rathian+
+Carapace Rathian
+Spine coda Narga
+Scaglia Narga+
+MidolloAllNarga
+Artiglio Tigrex+
+Zanna di Tigrex+
+Rubino Rathalos
+Sc. Rathalos+
+Carapace Diablos
+Raro scarabeo
+Carapace Gravios
+Pelle Giaprey+
+Min. arcobaleno
+Scaglia Giaprey+
+Carap.Kut-Ku blu
+Sc. Ceph.corallo
+Pinna Ceph. cor.
+Ala Gypc. viol.
+Membrana seduc.
+Bist Khezu pall.
+Pesce-dorato pic
+Scgl Ples. vrd+
+PinnaPles.verde+
+Carap. Blos nero
+Car. Gravios nr
+Buono Esperto
+Moneta Kirin
+Moneta di fuoco
+Membrana Fatalis
+Polv.Drago fuoco
+Carapace Daora
+(dummy)One-HornedTicket
+(dummy)Pirate J Ticket
+Carapace Teostra
+Pelle Remobra+
+Corno di Rajang
+Pelle Rajang dor
+PelleRajang nero
+Scgl dr. Daora+
+Succo Ins.-tuono
+Sacca-inferno
+Pelle Chameleos+
+Gioiello Cham.
+Gioiello Daora
+Pelle di Kirin+
+Corno Kirin azz.
+Sc. Lao-Shan+
+Art. Lao-Shan
+Carapace Gaoren
+Torace Gaoren
+Corno Teostra+
+ScglDrago fuoco+
+GioielloDr.fuoco
+Occhio Fatalis
+Scaglia Fatalis
+Corno Fatalis
+Mid.all.wyv.fuo.
+Artiglio Akantor
+Corazza Akantor
+Scaglia Akantor
+Pietra-wyvern
+Pesce gourmet+
+Car.Rathalos arg
+Minerale Union
+Moneta Rajang
+Pillola-armatura
+Tonno-lancia
+ToraceMonobBian
+CarapMonoblosBia
+GranCornoPlatino
+Carap. Rath.rosa
+Sc.Rathian rosa+
+Punta Rathian+
+Car.Rathalos azz
+Car.Rathian dor.
+ScglRathian dor+
+Rubino Rathian
+Ala Rathalos arg
+Cor. Lao-S azz.
+Crn Lao-Shan azz
+Occh.malvFatalis
+Sc. crem Fatalis
+Crn crem Fatalis
+Scgl Fatalis bnc
+CornoFatalis bnc
+OrecFortunKut-Ku
+CorazzaPesKut-Ku
+Ala forte Kut-Ku
+PelDurCongalala+
+ArtDurCongalala+
+Pelle gomm.spec+
+TestDuraGypceros
+Cristalpuro
+PelleKhezu crema
+OssoMostroPesan.
+Essenza mostro
+ArtDuroHermitaur
+CorPesHermitaur
+GastroliteHypno+
+Scagl.Sp. Kut-Ku
+CorazPesBasarios
+ForteAlaBasarios
+Pesce antico
+Min. Eltalite
+ScagSpesPlesioth
+PinnaSpPlesioth+
+ZannaPesPiscine
+Min. Mellanje
+CorazDuraGaruga
+PelleArgGaruga
+PellDrBlangonga+
+ZannPesBlangonga
+Artiglio perfor.
+CorCeanataurPes
+ArtDurCeanataur
+ScagSpesRathian
+CorazPesRathian
+SpinPesCodaNarga
+ScagliaSpesNarga
+ScaglCelesNarga
+CoraPesLavasioth
+PellSpecRemobra+
+ArtigDuroTigrex
+ScaCelesteTigrex
+ScagDuraRathalos
+AlaFortRathalos
+ScaCelesRathalos
+CorazPesDiablos
+CornoDuroAttorc
+FarfallaFantasma
+CorazPesGravios
+Mid.all.Gravios
+CorPesKut-KuBlu
+PelleCongalalaS+
+Cresta Vibrante
+ArtigDurCongaS
+AliDurePorpGypce
+ForteAlaAffascin
+TaglioSpecKhezu
+Polvere di vita
+ArtigDaimyoViola
+CorazDaimyoViola
+ScagSpesPlesioVr
+PinnaSpPlesio+Vr
+PellBlangongaR.+
+ZannPesBlangoR.
+CorCeanatrTerra
+ArtCeanatrTerra
+Perla nera giga.
+CorazPesNeraBlos
+CornNerDurAttorc
+GranPietraWyvern
+CorPesGraviosNer
+CornoDuroRajang
+PelleRajangNero+
+ScagDraSpesDaora
+PelleRajangOro+
+ScaSpesRathnOro
+ArtiglioLaoSBlu
+Moneta Esperto G
+Moneta guerrierG
+Pelle spec.Kirin
+Moneta leggendaG
+Elogio S
+Gelatina tuono
+SaccaFuocoFulg
+PelleSpecChamel+
+GioielGrDragoAnz
+CorazPesanDaora
+Corno duro Daora
+OssoGrDragoAnzia
+Criniera Platino
+ScaSpeDragoFuoco
+CarapaceLunastra
+Corazza Lunastra
+CorazPesanGaoren
+SpinDorPesGaoren
+CornDurChameleos
+CorazCelesGaoren
+CornoDurTeostra
+MuschioDragoAnt
+LegnoDragoAntico
+Fluido Y.Tsukami
+OcchioMalFatalis
+ScagSpesFatalis
+CornoDuroFatalis
+PinnForteUkanlos
+CorazPesUkanlos
+CorPesanLao-Shan
+Pietra Ukanlos
+Libro combo 5
+CorPesRathnRosa
+ScaSpesRathnRosa
+Spina Rathian
+CorPesRathlsBlu
+CorPesRathnOro
+SpinaRathianOro
+ScaglPesRathian
+CorPesRathlsArg
+ScaCelesLao-Shan
+CorPesFatalisCre
+CornoDurFatalisC
+ScagSpesFatalisB
+CornoDurFatalisB
+Pelle Giadrome
+Sacca di veleno
+Pelle di Conga
+Cor.Hermitaur pc
+Zanna di Piscine
+Scl. Kut-Ku blu
+Spina d.Monoblos
+Scaglia Garuga
+Ala Garuga
+Zanna di Tigrex
+Artiglio Tigrex
+Membr. Rathalos
+Corazza Rathalos
+Spina d. Diablos
+Pelle Iodrome
+Spina d. Blos nr
+Moneta Blangonga
+Buono Anima cacc
+Carne calda
+Pelle di Remobra
+Edera
+Arrowana-scoppio
+ZannPesLavasioth
+Membrana Daora
+Corazza Lao-Shan
+Criniera Teostra
+Cuore Monoblos
+Art.wyvern fuoco
+Artiglio Hypno+
+GastroliteHypno
+Scaglia Garuga+
+Pelle nera Narga
+Zanna Nargacuga+
+Carapace Tigrex
+Carap. Rathalos
+Torace Diablos
+Sacca soporifera
+Torace Blos nero
+(dummy)Famitsu Invoice
+Buono cacciatore
+Scaglia Tigrex+
+Midollo wyv.fuo.
+Carap. Lao-Shan
+Corazza Fatalis
+Zanna di Akantor
+Fungo speziato
+Tonno-gastronomo
+Sc.Rathalos azz+
+Scgl Rathal.arg+
+Coda di Lunastra
+Cor.crem Fatalis
+Cor. Fatalis bnc
+OssoRobusWyvern
+SaccaVelenoMort
+ScaglSpesGaruga
+Ala forte Garuga
+Osso massiccio
+Pelle neraNarga+
+ZannPesNargacuga
+CorazPesanTigrex
+ZannaPesanTigrex
+CorazPesRathalos
+SpnDorPesDiablos
+SaccaSonnoProf
+Sca.Sp.Kut-KuBlu
+PelSpesBullfango
+Cuoio Pelagus
+SpinaPesNeraBlos
+CorCelGraviosNer
+(dummy)FamitsuSpcialTkt
+MonetaCintNeraG
+Buono Buratt.sp.
+ArtigDurRajang
+ZannaPesRajang
+Ala Forte Daora
+CodaPelTuonKirin
+Spina Lunastra
+CorazPesTeostra
+FiletYamaTsukami
+CorazPesFatalis
+AlaForteFatalis
+MandibPalaUknlos
+SottoScagUkanlos
+ScaSpesRathlsBlu
+ScaSpesRathlsArg
+ScaSpeFatalisCre
+CorazPesFatalisB
+Zanna Genprey
+Zanna Ioprey
+Coda Garuga
+Pinza Ceanataur
+Coda Rathalos
+Artgl. Giadrome
+Art. Velocidrome
+Moneta Plesioth
+Mon. Cephadrome
+Pianta da linfa
+Nutrienti
+Art. Chameleos
+Artiglio Daora
+Pinza di Gaoren
+Corazza Teostra
+Art. Drago fuoco
+CodaRathalos azz
+Art.Velocidrome+
+Addome Vespoid
+Coda Blangonga
+Coda di Rajang
+Sacca-tuono
+Punta Chameleos
+Art. aff. Daora
+Moneta Gravios
+Mega Pelle-arm.
+CodaRathalos arg
+Ala crem Fatalis
+MembrFatalis bnc
+CodaPelleGaruga
+CodaCuoioBlango
+GamCeanataurPes
+ScagSpessaTigrex
+CorCelesGravios
+Sacca fulmine
+CodaCuoioBlangoR
+ArtigDuroGaoren
+ArtDurDragoFuoco
+PelleYamaTsukami
+ArtVangaUkanlos
+CodaPelRathlsArg
+AlaForFatalisRos
+AlaForteFatalisB
+Osso mostro med
+Zanna Congalala
+Carne fredda
+Pelle-armatura
+Estratto pallido
+Gr. coccinella
+Coda Chameleos
+Corno Lunastra
+Invol. osso gr.
+Zanna Bulldrome
+AlaFendenteNarga
+Artiglio Gaoren
+Punta di Akantor
+Bacca ghiacciata
+ArtDuroWyvFuoco
+AlaFortFendNarga
+ZannRobPelagus
+CodaPelChameleos
+CodaPesanUkanlos
+ScaSpesLao-Shan
+Zampa Ceanataur
+Tesoro Shakalaka
+Erba antidoto
+Immunizzatore
+Tonno-ghiottone
+Mega Droga dem.
+(dummy)Famitsu PT Tckt
+Eredità Shaka
+Coda tuono Kirin
+Pozione max
+Rubino Lao-Shan
+GrCorazAragosta
+AlaFortChameleos
+Superseme
+Gioiello Suiko
+Droga demoniaca
+Gioiello Akito
+Gll Lapislazzuli
+Gll Campo batt.
+CoronaVespoidReg
+Medicina di erbe
+Insettamaro
+Bev. energetica
+Superpillola
+Zanna Blangonga
+Coda Blos nero
+Splendido becco
+Pesce-rombo
+Art. Congalala
+P Normale Lv3
+P Perforante Lv3
+P Pallottola Lv3
+P Picco Lv3
+P Grappolo Lv3
+Sostanza Energ.
+SostanzaAttRavv
+Sostanza Veleno
+Sostan. Paralisi
+Sostanza Sonno
+Legno di drago+
+Corno di Kelbi
+Trapp. a scossa
+Bist. ben cotta
+Bistecca gourmet
+Carne bruciata
+Mega-succo
+Coda di Daora
+Guscio arag. gr
+Rana dalla coda
+Felvine
+Catalizzatore
+AlaRasoioVespoid
+Superestratto
+Erba fuoco
+Seme Drago
+P Drago
+AlaRasoioHornet
+Fungo-nitro
+Ins. salterino
+Boomerang
+Flauto
+Fungo stimolante
+Mega piccone
+Mega rete
+TesoroShakalaka+
+Rete
+Attrezzo trapp.
+Uovo d'acciaio
+Uovo d'oro
+Grillo
+Insetto-patata
+Psicosiero
+Binocolo
+Miele
+Flauto Salute
+Polvere da sparo
+Buono compagno
