--- a/fu/athena/languages/Spanish/components.txt
+++ b/fu/athena/languages/Spanish/components.txt
@@ -1,1 +1,677 @@
-楐汥搠⁥湁整慫਍楐摥慲搠獩潣਍楍敮慲⁬楨牥潲਍⹈洠湯瑳⹲瀠⹱਍楐汥䈠汵晬湡潧਍楐汥搠⁥敋扬൩䴊湩‮慍档污瑩ൡ䔊捳浡⁡畋⵴畋਍潃浬‮敖潬楣牰祥਍牃ꇃ敮⁯敤捳湯捯മ倊敩⁬敤䈠慬杮൯䔊捳浡⁡楇灡敲൹䄊瑳獡搠⁥湁整慫਍牃獩慴⁬楴牥慲਍楐摥慲搠⁥晡汩牡਍慂慹栠敵慣਍썃玡⹣栠敵潳瀠⹱਍獅⹣嘠汥捯灩敲൹倊敩⁬敖潬楣牰祥਍楂档⁯慣灲湩整潲਍汁⁡敤嘠獥潰摩਍潃据慨嘠獥潰摩਍牃獩慴⁬楬敧潲਍慃敢慺䠠牯敮慴牵਍潃据慨䠠牯敮慴牵਍楐汥瘠扩慲瑮൥䘊畬摩⁯潭獮牴潵਍楐汥搠⁥敇摮潲敭਍獅慣慭䜠湥牰祥਍獅慣慭䤠灯敲൹倊敩⁬敤䤠灯敲൹伊敲慪搠⁥畋⵴畋਍潃据慨䬠瑵䬭൵䌊湩档⁡敤䬠瑵䬭൵䄊敬慴䌠灥慨潬൳䔊捳浡⁡敃桰污獯਍楐汥䌠湯慧慬慬਍慇牲⁡晡汩摡ൡ倊敩⁬潧潭慳਍楐摥慲愠瑮獩꧃瑰മ倊敩⁬敤䜠湥牰祥਍畈獥⁯썰没摩൯倊敩⁬汢湡慤਍慇牲⁡效浲瑩畡൲䌊湯‮效浲瑩畡൲䔊捳浡⁡汐獥潩桴਍牁潲慷慮戠浯慢਍潃据慨䰠湡⹧瀠⹱਍汁瑥⁡汐獥潩桴਍潃⹮䬠瑵䬭⁵穡汵਍楐汥朠浯獯⁡異慲਍楐汥猠摥捵潴慲਍獅⹣倠敬楳瑯⁨⹶਍汁‮汐獥潩桴瘠മ䌊湯档⁡慂慳楲獯਍慃慢汬⁡畣档汩潬਍潃据慨䴠湯扯潬൳䌊敵湲⁯湥慣湲摡൯伊敲慪搠⁥慇畲慧਍楐潣愠楦慬潤਍潃据慨搠⁥慇畲慧਍牃湩搠⁥慇畲慧਍敐潬䈠慬杮湯慧਍楐汥䈠慬杮湯慧਍⹈洠湯瑳⹲朠⹲਍楐汥嘠汥捯摩潲敭਍慇牲⁡敃湡瑡畡൲䌊湯档‮敃湡瑡മ䌊湯‮敃湡瑡‮煰മ䔊捳牡‮獡獥湩൯䔊捳浡⁡慒桴慩൮䌊湯档⁡慒桴慩൮䌊‮牣ꇃ⹮吠杩敲൸䔊捳浡⁡敤吠杩敲൸䌊湯档⁡敤吠杩敲൸䄊慬搠⁥慒桴污獯਍獅慣慭删瑡慨潬൳䴊湩‮牄条湯瑩ൡ䌊敵湲⁯敲潴捲摩൯䌊湯档⁡楄扡潬൳䠊敵潳洠湯瑳畲⭯਍潃据慨䜠慲楶獯਍⹃挠썲溡‮片癡潩൳䌊⹵删瑥‮求獯渠മ䌊湯档⁡求獯渠മ䌊湯‮片癡潩⁳⹮਍牃ꇃ⹮䜠慲楶獯渠മ匊瑥⁡敤⁬慣獯਍慐慲楬敳慴਍楔正‮潣⹭䘠汥മ䈊捩潨搠癩湩൯倊敩⁬敤䴠獯睳湩൥匊汥潬栠敵‮慺灲ൡ䌊扡穥⁡畂汬慦杮൯倊敩⁬畂汬牤浯൥䠊敵潳朠杩湡整਍牃ꇃ敮⁯楇摡潲敭਍楐汥搠⁥楇灡敲൹䴊湯摥⁡畋⵴畋਍慃⹢嘠汥捯摩潲敭਍潍敮慤䌠湯慧慬慬਍潂獬⁡敤氠慬慭਍潂獬⁡汥꧃瑣楲慣਍畚潭搠⁥潰敤൲倊牥慬渠来慲਍汁⁡敤䈠獡牡潩൳䄊慬搠⁥潈湲瑥畡൲吊捩敫⁴潐歫൥䌊楲瑳污栠敩潬਍牃獩慴敬⁳楶慤਍敍据썩溳栠湯牯䜠਍畒썢슭₭楰汥䘠汥湹൥䜊楲汬⁯浥数慲潤൲吊捩⹫挠浯‮敆⹬ഫ倊敩牤⁡畦来൯倊獥⹣朠畯浲瑥਍牃ꇃ敮⁯敇摮潲敭਍潃浬汩潬圠癹牥൮䴊湯摥⁡敤䬠敨畺਍潍⹮夠慩⁮慇畲慧਍楔正瑥挠湩⹴渠മ䴊湯摥⁡桓杯湵਍潃畬湭⁡慇牯湥਍敍据썩溳搠⁥潨潮൲䐊獯楢捳獵਍潍敮慤搠⁥楔牧硥਍潍敮慤䐠慩汢獯਍牃ꇃ敮⁯潉牤浯൥䴊湯摥⁡敤䐠楡祭൯䌊썲溡潥删浥扯慲਍汆‮祗⹶映敵潧਍楈牥慢愠慴摲捥牥਍汆牯搠⁥慣瑣獵਍慃灲⁡牰浩癡牥ൡ䄊썴溺瀠湩档൯䰊扩潲挠浯潢⁳റ吊捩敫⁴祈湰൯倊汥䡯灹潮慎湲慪ഫ䌊汯業汬⁯祈湰൯倊穥猠浯썮暭牥൯䜊牡䠠灹潮朠⁲慣൬䠊敩扲⁡潳湭귃귂敦慲਍片湡洠獯慣挠牯⹮਍效捲摵潲敭਍楂档⁯汥꧃瑣楲潣਍楐摥慲漠捳牵ൡ吊潲潺漠捳牵൯倊捯썩溳愠瑮杩慵਍敔慬猠湩敩瑳慲਍楐汥爠祡摡ൡ䌊汯業汬⁯敤䈠潬൳䠊‮牤条돃⁮楶橥൯吊捩敫⁴慌慶楳瑯൨䔊捳片慳慌慶楳瑯൨䄊敬慴慌慶䕳灳ഫ倊敩⁬桃浡汥潥൳䌊湩档⁡桃浡汥潥൳倊慬慣搠⁥慒桴慩൮䌊敵湲⁯敤䐠潡慲਍潃据慨搠⁥慄牯ൡ倊敩⁬敤䬠物湩਍畃牥潮搠⁥楋楲൮䌊楲⁮敤䬠物湩਍畍杳⁯敤搠慲썧溳਍慍敤慲搠⁥牤条돃൮倊慬慣删瑡慨潬൳䔊捳浡⁡慌ⵯ桓湡਍畃牥潮䰠潡匭慨൮䌊敵湲⁯慭敪瑳മ䌊楲⁮敤䰠湵獡牴ൡ䌊湩档⁡牤‮畦来൯匊湡牧⁥牤‮湡⹣਍潃据慨搠⁥慇牯湥਍畃牥潮吠潥瑳慲਍獅⹣搠⹲映敵潧਍搨浵祭䬩湩⁧潌獢整⁲桓൬⠊畤浭⥹慆業獴⁵楔正瑥਍畃牥潮䴠湯‮汢മ䌊汯浵慮䴠湯‮汢മ䌊湯档⁡潍⹮戠⹬਍潃⹮删瑡楨湡爠⹯਍獅‮慒桴⹩爠獯ൡ倊뫃⁡敤删瑡楨湡਍汁⁡瑒汨⹳挠⹥਍獅⹣删桴獬‮散മ䌊灡‮瑒汨⹳挠⹥਍楐汥愠瑬⁡慣楬⹤਍楐汥搠⁥求湡潧⬠਍湉敳瑣⁯牡潣物獩਍楐汥䈠汵摬潲敭⬠਍楍⹮䌠牡慢楬慴਍獅慣慲慢潪爠祥਍牃ꇃ敮⁯慭獥牴൯䠊敵潳猠돃楬潤਍獅⹣嘠汥捯灩敲⭹਍楐汥嘠汥捯灩敲⭹਍汁⁡湩⹴嘠獥潰摩਍慃慰慲⹺嘠獥潰摩਍慃摬⁯潭獮牴潵਍牃獩慴⁬潮慶਍獅⹣搠杲‮慄牯ൡ䄊慬椠瑮‮潈湲瑥മ䌊灡‮潈湲瑥畡൲䔊捳浡⁡敇灮敲⭹਍楐汥搠⁥敇灮敲⭹਍潂獬⁡慰썲没獩獩਍獅慣慭䤠灯敲⭹਍楐汥搠⁥潉牰祥ഫ䈊汯慳搠⁥潴楸慮൳伊⹲䬠瑵䬭⁵慬杲ൡ䌊灡牡穡돃⁮畋⵴畋਍楐汥搠⁥潃杮⁡ഫ䔊捳浡⁡敃桰污獯ഫ䄊敬慴䌠灥慨潬⭳਍楐汥䌠湯慧慬慬⬠਍慇牲⁡潃杮污污⭡਍楐汥朠浯獯⭡਍慃敢慺䜠灹散潲൳䌊汯⁡敤䜠湥牤浯൥倊敩⁬桋穥⁵畃瑲മ䠊‮潭獮牴潵搠牵൯䜊牡⹲䠠牥業⹴ഫ䌊灡‮效浲瑩畡൲䌊湯‮牣‮祗敶湲਍敐潬祈湰乯牡橮ൡ倊浬䍡汯䅡捲䥯楲൳倊捩⁯祈湰൯䰊ꇃ牧浩⁡慂慳楲獯਍慃慰⹲䈠獡牡潩൳䔊捳浡⁡畋⵴畋ഫ䔊捳‮畋⵴畋愠⹺ഫ䔊捳浡⁡汐獥潩桴ഫ䄊敬慴倠敬楳瑯⁨ഫ吊돃慲⁸潍潮汢獯਍畃牥潮潒潪汁慴慃਍慃⹰䴠湯扯潬൳倊敩牤⁡慬慶਍牏氮牡慧䜠牡杵ൡ倊捩⁯敲番敶敮⹣਍慃慰慲썺溳䜠牡杵ൡ倊敩⁬求湡潧杮⭡਍潃浬‮求湡潧杮⭡਍畈獥⁯牢瑵൯䌊灡‮敃湡瑡畡൲䜊牡⹲䌠慥慮⹴ഫ䔊捳浡⁡慒桴慩⭮਍慃慰慲⹺删瑡楨湡਍썐憺䌠汯⁡慎杲ൡ䔊捳浡⁡慎杲⭡਍敃敲牢⁯慎杲ൡ䜊牡慲吠杩敲⁸ഫ䌊汯業汬⁯楔牧硥ഫ刊扵귃귂搠⁥慒桴污獯਍獅慣慭删瑡慨潬⭳਍慃慰慲⹺䐠慩汢獯਍獅慣慲慢潪爠牡൯䌊灡牡穡‮片癡潩൳倊敩⁬敤䜠慩牰祥ഫ䴊湩牥污愠捲楯楲൳䔊捳浡⁡楇灡敲⁹ഫ䌊灡‮畋⵴畋愠畺൬䔊⹳䌠桰獬‮潣慲൬䄊⹬䌠桰獬‮潣慲൬䄊慬䜠灹散潲⁳異൲䌊湩档⁡敳畤瑣牯ൡ䘊汩‮桋穥⁵썰没മ倊穥搠牯摡⁯数⹱਍獅⹣倠敬楳瑯⁨⭶਍汁‮汐獥潩桴瘠⬮਍慃⹰䈠潬⁳敮牧൯䌊灡‮片癡潩⁳⹮਍楔正瑥攠灸牥潴਍潍敮慤搠⁥楋楲൮䴊湯摥⁡敤映敵潧਍楃据慨䘠瑡污獩਍潐癬⁯牤‮畦来൯䌊灡牡穡돃⁮慄牯ൡ⠊畤浭⥹湏ⵥ潈湲摥楔正瑥਍搨浵祭倩物瑡⁥⁊楔正瑥਍慃慰⹲吠潥瑳慲਍楐汥搠⁥敒潭牢⭡਍畃牥潮删橡湡൧倊敩⁬慒慪杮搠牯മ倊‮慒慪杮渠来潲਍獅⹣搠杲‮慄牯⭡਍畚潭䈠捩潨攠썬掩മ䈊汯慳椠普牥慮൬倊敩⁬桃浡汥潥⁳ഫ䨊祯⁡桃浡汥潥൳䨊祯⁡敤䐠潡慲਍楐汥搠⁥楋楲⭮਍畃牥潮䬠物湩挠⹥਍獅慣慭䰠潡匭慨⭮਍慇牲⁡慌ⵯ桓湡਍慃慰⹲搠⁥慇牯湥਍썔犳硡搠⁥慇牯湥਍畃牥潮吠潥瑳慲⬠਍獅⹣搠⹲映敵潧⬠਍潊慹搠⹲映敵潧਍橏⁯敤䘠瑡污獩਍獅慣慭䘠瑡污獩਍畃牥潮䘠瑡污獩਍潃慬圠癹‮畦来൯䜊牡慲搠⁥歁湡潴൲䌊湯档⁡歁湡潴൲䔊捳浡⁡歁湡潴൲倊敩牤⁡敤圠癹牥൮倊獥⹣朠畯浲瑥⬠਍慃⹰删桴獬‮汰മ䴊湩牥污搠⁥湵썩溳਍潍敮慤删橡湡൧倊귃귂摬牯⁡牡慭畤慲਍瑁뫃⁮慬穮ൡ吊돃慲⁸潍潮汢戠൬䌊灡‮潍潮汢獯戠൬䌊敵湲偯慬䅴瑬䍡ൡ䌊灡‮慒桴慩⁮潲മ䔊⹳删瑡楨‮潲⬮਍썐憺搠⁥慒桴慩⁮ഫ䌊穲⹡删桴獬‮散മ䌊湯‮慒桴慩⁮潤മ䔊捳‮慒桴慩⁮潤മ刊扵귃搠⁥慒桴慩൮䄊慬删瑡慨潬⁳汰മ䌊湯档⁡慌ⵯ⁓散മ䌊敵湲⁯慌ⵯ⁓散മ伊潪搠浥‮慆慴楬൳䔊捳‮慃‮慆慴楬൳䌊⹵䌠⹡䘠瑡污獩਍獅⹣䘠瑡污獩戠⹬਍畃‮慆慴楬⁳汢മ伊橲䭡瑵䬭卵敵瑲൥䌊湯‮数⁳畋⵴畋਍汁⁡畋⵴畋搠牵ൡ倊敩䑬䍵湯慧慬慬ഫ䜊牲䑡䍵湯慧慬慬ഫ倊敩⁬潧潭慳䔠灳ഫ䌊扡祇捰牥獯畄慲਍牃獩慴⁬異潲਍楐汥挠敲慭䬠敨畺਍畈獥䵯湯瑳畲偯獥਍獅湥楣⁡潭獮牴潵਍慇牲䑡䡵牥業慴牵਍潃偮獥效浲瑩畡൲䠊灹潮䈠穥慯⁲ഫ䔊捳片敵慳畋⵴畋਍潃偮獥慂慳楲獯਍汁䉡獡牡潩䑳牵ൡ倊穥愠瑮杩潵਍楍⹮䔠瑬污瑩ൡ䔊捳倠敬楳瑯⁨牧മ䄊敬側敬楳瑯䕨灳ഫ䌊汯敐偳獩楣敮਍楍⹮䴠汥慬橮൥䌊湯‮慇畲慧搠牵ൡ倊敩⁬慇畲慧瀠瑬਍楐汥畄求湡潧杮⭡਍潃偬獥求湡潧杮ൡ䜊牡慲搠獥慧牲മ䌊湯敐䍳慥慮慴牵਍慇牲䍡慥慮䑴牵ൡ䔊捳删瑡楨湡朠⹲਍潃偮獥慒桴慩൮倊뫃䍡汯乡牡慧畄൲䔊捳浡乡牡慧片൵䔊捳浡乡牡慧楃汥൯䌊湯敐䱳癡獡潩桴਍楐汥删浥扯慲䔠灳਍慇牲呡杩敲䑸牵ൡ䔊捳楔牧硥楃汥൯䔊捳慒桴污獯畄慲਍汁剡瑡慨潬䙳瑲൥䔊捳慒桴污獯楃汥൯䌊湯敐䑳慩汢獯਍畃牥潮猠돃楬潤਍慍楲潰慳映湡獴⹭਍潃偮獥片癡潩൳吊⹲挠牥‮片癡潩൳䌊牯敐䭳瑵䬭䅵畺൬倊敩䍬湯慧獅⭭਍牃獥慴嘠扩慲瑮൥䜊牡慲潃杮䕡浳畄൲䄊慬祇偰牵畄慲਍汁⁡敳畤瑣‮畤慲਍潃瑲䕥灳桋穥൵倊汯潶搠⁥楶慤਍慇䑲䠮牥業慴牵穃਍潃䑮䠮牥業慴牵穃਍獅偣敬楳瑯器摲片਍汁瑥偡敬噳摲獅⭰਍楐汥䈠慬杮潃牢ഫ䌊汯䉭慬杮䍯扯൲䌊湯敔牲䍡慥慮牴਍慇呲牥慲敃湡瑡മ倊牥慬渠来⹲朠杩മ䌊湯敐䉳潬乳牧਍畃牥敎牧䍯牵卶汯਍楐摥慲圠癹牥⁮⹧਍潃偮獥片癡潩乳牧਍牃潮删橡湡⁧畤潲਍楐汥慒慪杮敎牧൯䔊捳牄条慄牯䝡൲倊敩⁬慒慪杮搠牯ഫ䔊捳慒桴慩䑮牯片൵䜊牡慲慌ⵯ桓湡敃൬䴊湯摥⁡硥数瑲⁯േ䴊湯摥䝡敵牲േ倊敩⁬楋楲⁮獅捰ഫ䴊湯摥⁡敬敹摮⁡േ䴊湥楣돃⁮潨潮⁲൓䜊汥‮楂档⁯汥꧃⹣਍潂獬⁡慬穮污慬⹭਍楐汥桃浡汥䕥灳ഫ䨊祯⁡牄条楔牥䝲൲䌊湯敐䑳潡慲਍畃牥潮慄牯䑡牵൯䠊敵潳祗敶湲楔䝥൲䌊楲⁮汰瑡湩൯䔊捳牄条돃䙮敵潧片਍慃⹰䰠湵獡牴ൡ䌊湯档⁡界慮瑳慲਍潃偮獥慇牯湥਍潃偬獥慇牯湥਍畃䍥慨敭敬獯畄潲਍潃䝮潡敲䍮敩潬਍畃呥潥瑳慲畄潲਍畍杳䑯慲썧溳湁ൣ䴊摡牥䑡慲썧溳湁ൣ䘊畬摩慙慭獔歵浡൩伊潪洠污慶潤䘠瑡മ䔊捳片䙵瑡污獩਍畃牥畄潲慆慴楬൳䄊敬慴歕湡潬䙳敵਍潃偮獥歕湡潬൳䌊湯敐䱳潡匭慨൮倊敩牤⁡歕湡潬൳䰊扩潲挠浯潢⁳വ䌊湯敐剳瑡楨湡獒ൡ䔊捳慒桴慩剮慳片਍獅楰慮删瑡楨湡਍潃偮獥瑒汨䍳汥਍潃割瑡楨湡潄偲獥਍獅剰瑡楨湡潄൲䔊捳慒桴慩䍮敩潬਍潃偮獥瑒汨䝳楲൳䔊捳慌ⵯ桓湡楃汥൯䌊湯敐䙳瑡污獩慃൲䌊敵慆慴楬䍳牡畄਍獅䝣䙲瑡污獩求਍畃牥䙮瑡污獩求畄਍楐汥搠⁥楇摡潲敭਍潂獬⁡敤瘠湥湥൯倊敩⁬敤䌠湯慧਍潃⹮䠠牥業⹴瀠⹱਍潃浬汩潬倠獩楣敮਍獅⹣䬠瑵䬭⁵穡汵਍潃畬湭⁡潍潮汢獯਍獅慣慭搠⁥慇畲慧਍汁⁡敤䜠牡杵ൡ䌊汯業汬⁯楔牧硥਍慇牲⁡敤吠杩敲൸䌊湩档⁡慒桴污獯਍潃据慨删瑡慨潬൳䌊汯浵慮䐠慩汢獯਍楐汥搠⁥潉牤浯൥䌊汯浵‮求獯渠മ䴊湯摥⁡求湡潧杮ൡ吊捩⹫愠浬⁡慣摺മ䌊牡敮挠污敩瑮൥倊敩⁬敤删浥扯慲਍楈摥慲਍牁潲慷慮爠癥湥⹴਍潃偬獥慌慶楳瑯൨䌊湩档⁡敤䐠潡慲਍潃据慨䰠潡匭慨൮䌊楲⁮敤吠潥瑳慲਍潃慲썺溳䴠湯扯潬൳䜊牡慲圠癹‮畦来൯䜊牡慲䠠灹潮ഫ䠊灹潮䈠穥慯൲䔊捳浡⁡慇畲慧ഫ倊敩⁬慎杲⁡杮൲䌊汯⹭丠牡慧畣慧ഫ䌊灡牡穡돃⁮楔牧硥਍慃慰⹲删瑡慨潬൳吊돃慲⁸敤䐠慩汢獯਍潂獬⁡潳湭귃귂敦慲਍썔犳硡䈠潬⁳⹮਍搨浵祭䘩浡瑩畳䤠癮楯散਍楔正瑥挠穡摡牯਍獅慣慭吠杩敲⁸ഫ䴊꧃⹤圠癹‮畦来൯䌊灡牡‮慌ⵯ桓湡਍潃据慨䘠瑡污獩਍潃浬‮敤䄠慫瑮牯਍敓慴瀠捩湡整਍瑁뫃⁮慧瑳썲溳浯൯䔊捳‮瑒汨⹳挠⭥਍獅⹣删桴獬‮汰⬮਍潃慬搠⁥界慮瑳慲਍潃⹮䌠⹡䘠瑡污獩਍潃⹮䘠瑡污獩戠⹬਍畈獥坯癹牥剮扯獵਍潂獬⁡敶⁮潭瑲污਍獅⹣䜠牡杵⁡牧慳਍汁⁡慇畲慧映瑲൥䠊敵潳洠獡癩൯倊敩⁬慎杲⁡杮⭲਍潃偬獥慎杲捡杵ൡ䌊湯敐味杩敲൸䌊汯敐味杩敲൸䌊湯敐剳瑡慨潬൳䔊灳敐䑳慩汢獯਍潂獬⁡敤挠浯ൡ䔊捳片畋⵴畋穁汵਍敐潬畂汬慦杮䝯൲䌊敵潲楐汥敐慬畧൳䔊灳敐䉳潬乳来਍潃䝮慲楶獯李楃汥਍搨浵祭䘩浡瑩畳灓楣污歔൴䴊湯摥䍡湩乴⁧േ吊正䵴牡潩敮慴獅൰䜊牡慲慒慪杮畄慲਍潃偬獥慒慪杮਍汁⁡慄牯⁡畤慲਍畃牥䍯汯䭡物湩牔਍썐憺䰠湵獡牴ൡ䌊湯敐味潥瑳慲਍楆瑬夠浡呡畳慫業਍潃偮獥慆慴楬൳䄊慬搠牵⁡慆慴楬൳䴊湡偤污啡慫汮獯਍畓䕢捳歕湡潬൳䔊捳慒桴敃䝬൲䔊捳慒桴污獯汐片਍獅䙣瑡污獩慃䝲൲䌊湯慆慴楬䉳䑬牵਍潃浬汩潬䜠湥牰祥਍潃浬汩潬䤠灯敲൹䌊汯⁡敤䜠牡杵ൡ倊湩⹺䌠慥慮慴牵਍潃慬搠⁥慒桴污獯਍慇牲⁡楇摡潲敭਍⹇嘠汥捯摩潲敭਍潍敮慤倠敬楳瑯൨䴊湯‮敃桰摡潲敭਍汐湡慴搠⁥慳楶ൡ上瑵楲湥整൳䜊牡慲䌠慨敭敬獯਍慇牲⁡敤䐠潡慲਍楐穮獡搠⁥慇牯湥਍潃据慨吠潥瑳慲਍慇牲⁡牤‮畦来൯䌊汯⁡瑒汨⹳挠⹥਍⹇嘠汥捯摩潲敭ഫ䄊摢浯湥嘠獥潰摩਍潃慬䈠慬杮湯慧਍潃慬搠⁥慒慪杮਍潂獬⁡敤琠畲湥൯倊뫃⁡敤䌠慨敭敬獯਍慇牲⁡晡汩䐠潡慲਍潍敮慤䜠慲楶獯਍敍慧楰汥愠浲摡മ䌊汯⁡瑒汨⹳瀠⹬਍汁⁡慃‮慆慴楬൳䌊湩‮慆慴楬⁳汢മ䌊敵潲䍬汯䝡牡杵ൡ䌊敵潲潃慬求湡潧਍慐慴敃湡瑡畡偲獥਍獅呣杩敲䝸൲䌊湯片癡潩䍳敩潬਍潂獬⁡敤爠祡൯䌊敵䍲汯求湡䍧扯൲䜊牡慲畄慲慇牯湥਍慇䑲慲썧溳畆来䑯൵倊敩⁬慙慭獔歵浡൩䜊牡慲慃啶慫汮獯਍潃慬楐汥慒桴汐਍汁䙡瑡污獩慃䑲൵䄊慬慆慴楬䉳䙬敵൲䠊‮潭獮牴‮敭⹤਍潃浬‮潃杮污污ൡ䌊牡敮映썲슭憭਍楐汥搠⁥牡慭畤慲਍硅牴捡潴瀠ꇃ楬潤਍片湡洠牡煩極慴਍潃慬䌠慨敭敬獯਍畃牥潮䰠湵獡牴ൡ䌊ꇃ捳‮畨獥⁯牧മ䌊汯⹭䈠汵摬潲敭਍汁⁡畣档‮慎杲ൡ䜊牡慲搠⁥慇牯湥਍썐憺搠⁥歁湡潴൲䈊祡⁡潣杮汥摡ൡ䜊牲䑡牵坡癹畆来൯䄊慬畃档慎杲䙡瑲൥䌊汯汭潬敐慬畧䱳൧䌊敵潲潃慬桃浡汥൥䌊汯偡獥歕湡潬൳䔊捳慌ⵯ桓湡敐൳倊瑡⁡敃湡瑡畡൲吊獥牯⁯桓歡污歡ൡ䠊敩扲⁡湡썴슭播瑯൯䤊浮湵穩摡牯਍瑁뫃⁮汧瑯돃൮䴊来摡潲慧搠浥湯മ⠊畤浭⥹慆業獴⁵呐吠正൴䠊牥湥‮桓歡污歡ൡ䌊汯⁡楋楲⁮牴敵മ倊捯썩溳洠ꇃ⹸਍畒썢슭₭慌ⵯ桓湡਍潃䝮慲䱮湡潧瑳ൡ䄊慬桃浡汥潥䑳牵ൡ匊浥汩慬搠⁥潰敤൲䨊祯⁡敤匠極潫਍牄杯⁡敤潭썮憭慣਍潊慹搠⁥歁瑩൯䨊祯⁡慬楰汳ꇃ畺楬਍潊慹挠浡潰戠瑡മ䌊牯‮敒湩⁡敖灳മ䴊摥捩湩⁡敨扲污਍楂档⁯浡牡潧਍敂楢慤攠敮杲꧃⹴਍썐沭潤慲搠⁥潰敤൲䌊汯⹭䈠慬杮湯慧਍潃慬䈠潬⁳敮牧ൡ倊捩⁯獥汰꧃摮摩൯倊穥攠瑳畲湥潤潳਍慇牲⁡潃杮污污ൡ䐊獩⹰渠牯慭⁬癎ള䐊獩⹰瀠牥⹦丠㍶਍⹄瀠牥楤썧溳丠㍶਍楄灳‮硥汰‮癎ള䐊獩⹰朠畲潰丠㍶਍敒敶瑳‮湥牥썧₭ൡ刊癥獥⹴挠搮獩⹴਍敒敶瑳‮敶敮潮਍敒敶瑳‮慰썲没മ刊癥獥⹴猠敵뇃൯䴊摡牥⁡牤条돃⁮ഫ䌊敵湲⁯敤䬠汥楢਍牔浡慰挠潨畱൥䘊汩瑥⁥污瀠湵潴਍楆敬整朠畯浲瑥਍慃湲⁥潴瑳摡ൡ䴊来穡浵൯䌊汯⁡敤䐠潡慲਍片湡挠湯⹣䰠湡⹧਍慒慮挠湯挠汯ൡ嘊摩䘠汥湹൥䌊瑡污穩摡牯਍汁⁡畣档‮敖灳മ䔊瑸慲瑣⁯潰敤൲䠊敩扲⁡敤映敵潧਍敓業汬⁡牤条돃൮䐊獩⹰搠慲썧溳਍汁⁡畣档‮潈湲മ上瑩潲敳慴਍慓瑬⁡楢档獯਍潂浯牥湡൧䘊慬瑵ൡ匊瑥⁡硥楣慴瑮൥䴊来灡捩൯䴊来牡敲⁤楢档獯਍敔潳潲桓歡污歡⭡਍敒൤䠊牥慲⹭琠慲灭ൡ䠊敵潶搠⁥捡牥൯䠊敵潶搠⁥牯൯䜊楲汬൯䈊捩潨쌠憱敭਍獐捩獯敵潲਍牐獩썭璡捩獯਍楍汥਍汆畡慴搠⁥慓畬൤倊돃癬牯ൡ吊煩敵⁴慃慭慲慤਍
+Piel de Anteka
+Piedra disco
+Mineral hierro
+H. monstr. pq.
+Piel Bullfango
+Piel de Kelbi
+Min. Machalita
+Escama Kut-Ku
+Colm. Velociprey
+Cráneo desconoc.
+Piel de Blango
+Escama Giaprey
+Astas de Anteka
+Cristal tierra
+Piedra de afilar
+Baya hueca
+Cásc. hueso pq.
+Esc. Velociprey
+Piel Velociprey
+Bicho carpintero
+Ala de Vespoid
+Concha Vespoid
+Cristal ligero
+Cabeza Hornetaur
+Concha Hornetaur
+Piel vibrante
+Fluido monstruo
+Piel de Gendrome
+Escama Genprey
+Escama Ioprey
+Piel de Ioprey
+Oreja de Kut-Ku
+Concha Kut-Ku
+Cincha de Kut-Ku
+Aleta Cephalos
+Escama Cephalos
+Piel Congalala
+Garra afilada
+Piel gomosa
+Piedra antisépt.
+Piel de Genprey
+Hueso pálido
+Piel blanda
+Garra Hermitaur
+Con. Hermitaur
+Escama Plesioth
+Arrowana bomba
+Concha Lang. pq.
+Aleta Plesioth
+Con. Kut-Ku azul
+Piel gomosa pura
+Piel seductora
+Esc. Plesioth v.
+Al. Plesioth v.
+Concha Basarios
+Caballa cuchillo
+Concha Monoblos
+Cuerno encarnado
+Oreja de Garuga
+Pico afilado
+Concha de Garuga
+Crin de Garuga
+Pelo Blangonga
+Piel Blangonga
+H. monstr. gr.
+Piel Velocidrome
+Garra Ceanataur
+Conch. Ceanat.
+Con. Ceanat. pq.
+Escar. asesino
+Escama Rathian
+Concha Rathian
+C. crán. Tigrex
+Escama de Tigrex
+Concha de Tigrex
+Ala de Rathalos
+Escama Rathalos
+Min. Dragonita
+Cuerno retorcido
+Concha Diablos
+Hueso monstruo+
+Concha Gravios
+C. crán. Gravios
+Cu. Ret. Blos n.
+Concha Blos n.
+Con. Gravios n.
+Crán. Gravios n.
+Seta del caos
+Paraliseta
+Tick. com. Fel.
+Bicho divino
+Piel de Mosswine
+Sello hue. zarpa
+Cabeza Bullfango
+Piel Bulldrome
+Hueso gigante
+Cráneo Giadrome
+Piel de Giaprey
+Moneda Kut-Ku
+Cab. Velocidrome
+Moneda Congalala
+Bolsa de llama
+Bolsa eléctrica
+Zumo de poder
+Perla negra
+Ala de Basarios
+Ala de Hornetaur
+Ticket Pokke
+Cristal hielo
+Cristales vida
+Mención honor G
+Rubí­ piel Felyne
+Grillo emperador
+Tick. com. Fel.+
+Piedra fuego
+Pesc. gourmet
+Cráneo Gendrome
+Colmillo Wyvern
+Moneda de Khezu
+Mon. Yian Garuga
+Ticket cint. n.
+Moneda Shogun
+Columna Gaoren
+Mención de honor
+Dosbiscus
+Moneda de Tigrex
+Moneda Diablos
+Cráneo Iodrome
+Moneda de Daimyo
+Cráneo Remobra
+Fl. Wyv. fuego
+Hierba atardecer
+Flor de cactus
+Carpa primavera
+Atún pincho
+Libro combos 1
+Ticket Hypno
+PeloHypnoNarnja+
+Colmillo Hypno
+Pez somnífero
+Gar Hypno gr cal
+Hierba somní­fera
+Gran mosca corn.
+Hercudrome
+Bicho eléctrico
+Piedra oscura
+Trozo oscuro
+Poción antigua
+Tela siniestra
+Piel rayada
+Colmillo de Blos
+H. dragón viejo
+Ticket Lavasioth
+EscGrsaLavasioth
+AletaLavasEsp+
+Piel Chameleos
+Cincha Chameleos
+Placa de Rathian
+Cuerno de Daora
+Concha de Daora
+Piel de Kirin
+Cuerno de Kirin
+Crin de Kirin
+Musgo de dragón
+Madera de dragón
+Placa Rathalos
+Escama Lao-Shan
+Cuerno Lao-Shan
+Cuerno majest.
+Crin de Lunastra
+Cincha dr. fuego
+Sangre dr. anc.
+Concha de Gaoren
+Cuerno Teostra
+Esc. dr. fuego
+(dummy)King Lobster Shl
+(dummy)Famitsu Ticket
+Cuerno Mon. bl.
+Columna Mon. bl.
+Concha Mon. bl.
+Con. Rathian ro.
+Es. Rathi. rosa
+Púa de Rathian
+Ala Rthls. ce.
+Esc. Rthls. ce.
+Cap. Rthls. ce.
+Piel alta calid.
+Piel de Blango +
+Insecto arcoiris
+Piel Bulldrome +
+Min. Carbalita
+Escarabajo rey
+Cráneo maestro
+Hueso sólido
+Esc. Velociprey+
+Piel Velociprey+
+Ala int. Vespoid
+Caparaz. Vespoid
+Caldo monstruo
+Cristal nova
+Esc. drg. Daora
+Ala int. Hornet.
+Cap. Hornetaur
+Escama Genprey+
+Piel de Genprey+
+Bolsa parálisis
+Escama Ioprey+
+Piel de Ioprey+
+Bolsa de toxinas
+Or. Kut-Ku larga
+Caparazón Kut-Ku
+Piel de Conga +
+Escama Cephalos+
+Aleta Cephalos+
+Piel Congalala +
+Garra Congalala+
+Piel gomosa+
+Cabeza Gypceros
+Cola de Gendrome
+Piel Khezu Curt.
+H. monstruo duro
+Garr. Hermit.+
+Cap. Hermitaur
+Con. cr. Wyvern
+PeloHypnoNarnja
+PlmaColaArcoIris
+Pico Hypno
+Lágrima Basarios
+Capar. Basarios
+Escama Kut-Ku+
+Esc. Kut-Ku az.+
+Escama Plesioth+
+Aleta Plesioth +
+Tórax Monoblos
+CuernoRojoAltaCa
+Cap. Monoblos
+Piedra lava
+Or.larga Garuga
+Pico rejuvenec.
+Caparazón Garuga
+Piel Blangonga+
+Colm. Blangonga+
+Hueso bruto
+Cap. Ceanataur
+Garr. Ceanat.+
+Escama Rathian+
+Caparaz. Rathian
+Púa Cola Narga
+Escama Narga+
+Cerebro Narga
+Garra Tigrex +
+Colmillo Tigrex+
+Rubí­ de Rathalos
+Escama Rathalos+
+Caparaz. Diablos
+Escarabajo raro
+Caparaz. Gravios
+Piel de Giaprey+
+Mineral arcoiris
+Escama Giaprey +
+Cap. Kut-Ku azul
+Es. Cphls. coral
+Al. Cphls. coral
+Ala Gypceros pur
+Cincha seductora
+Fil. Khezu pál.
+Pez dorado peq.
+Esc. Plesioth v+
+Al. Plesioth v.+
+Cap. Blos negro
+Cap. Gravios n.
+Ticket experto
+Moneda de Kirin
+Moneda de fuego
+Cincha Fatalis
+Polvo dr. fuego
+Caparazón Daora
+(dummy)One-HornedTicket
+(dummy)Pirate J Ticket
+Capar. Teostra
+Piel de Remobra+
+Cuerno Rajang
+Piel Rajang dor.
+P. Rajang negro
+Esc. drg. Daora+
+Zumo Bicho eléc.
+Bolsa infernal
+Piel Chameleos +
+Joya Chameleos
+Joya de Daora
+Piel de Kirin+
+Cuerno Kirin ce.
+Escama Lao-Shan+
+Garra Lao-Shan
+Capar. de Gaoren
+Tórax de Gaoren
+Cuerno Teostra +
+Esc. dr. fuego +
+Joya dr. fuego
+Ojo de Fatalis
+Escama Fatalis
+Cuerno Fatalis
+Cola Wyv. fuego
+Garra de Akantor
+Concha Akantor
+Escama Akantor
+Piedra de Wyvern
+Pesc. gourmet +
+Cap. Rthls. pl.
+Mineral de unión
+Moneda Rajang
+Pí­ldora armadura
+Atún lanza
+Tórax Monobl bl
+Cap. Monoblos bl
+CuernoPlatAltaCa
+Cap. Rathian ro.
+Es. Rathi. ro.+
+Púa de Rathian +
+Crza. Rthls. ce.
+Con. Rathian do.
+Esc. Rathian do.
+Rubí de Rathian
+Ala Rathalos pl.
+Concha Lao-S ce.
+Cuerno Lao-S ce.
+Ojo dem. Fatalis
+Esc. Ca. Fatalis
+Cu. Ca. Fatalis
+Esc. Fatalis bl.
+Cu. Fatalis bl.
+OrjaKut-KuSuerte
+Con. pes Kut-Ku
+Ala Kut-Ku dura
+PielDuCongalala+
+GrraDuCongalala+
+Piel gomosa Esp+
+CabGypcerosDura
+Cristal puro
+Piel crema Khezu
+HuesoMonstruoPes
+Esencia monstruo
+GarraDuHermitaur
+ConPesHermitaur
+Hypno Bezoar +
+EscGruesaKut-Ku
+ConPesBasarios
+AlaBasariosDura
+Pez antiguo
+Min. Eltalita
+Esc Plesioth gr.
+AletPlesiothEsp+
+ColPesPiscine
+Min. Mellanje
+Con. Garuga dura
+Piel Garuga plt
+PielDuBlangonga+
+ColPesBlangonga
+Garra desgarr.
+ConPesCeanataur
+GarraCeanatDura
+Esc Rathian gr.
+ConPesRathian
+PúaColaNargaDur
+EscamaNargaGru
+EscamaNargaCielo
+ConPesLavasioth
+Piel Remobra Esp
+GarraTigrexDura
+EscTigrexCielo
+EscRathalosDura
+AlaRathalosFrte
+EscRathalosCielo
+ConPesDiablos
+Cuerno sólido
+Mariposa fantsm.
+ConPesGravios
+Tr. cer. Gravios
+CorPesKut-KuAzul
+PielCongaEsm+
+Cresta Vibrante
+GarraCongaEsmDur
+AlaGypPurDura
+Ala seduct. dura
+CorteEspKhezu
+Polvo de vida
+GarD.HermitaurCz
+ConD.HermitaurCz
+EscPlesiothVrdGr
+AletaPlesVrdEsp+
+Piel BlangCobr+
+ColmBlangoCobr
+ConTerraCeanatr
+GarTerraCeanat.
+Perla negr. gig.
+ConPesBlosNgr
+CuerNegroCurvSol
+Piedra Wyvern g.
+ConPesGraviosNgr
+Crno Rajang duro
+PielRajangNegro
+EscDragDaoraGr
+Piel Rajang dor+
+EscRathianDorGru
+GarraLao-ShanCel
+Moneda experto G
+MonedaGuerrG
+Piel Kirin Espc+
+Moneda leyenda G
+Mención honor S
+Gel. Bicho eléc.
+Bolsa lanzallam.
+PielChameleEsp+
+Joya DragTierrGr
+ConPesDaora
+CuernoDaoraDuro
+HuesoWyvernTieGr
+Crin platino
+EscDragónFuegoGr
+Cap. Lunastra
+Concha Lunastra
+ConPesGaoren
+ColPesGaoren
+CueChameleosDuro
+ConGaorenCielo
+CueTeostraDuro
+MusgoDragónAnc
+MaderaDragónAnc
+FluidYamaTsukami
+Ojo malvado Fat.
+EscGruFatalis
+CuerDuroFatalis
+AletaUkanlosFue
+ConPesUkanlos
+ConPesLao-Shan
+Piedra Ukanlos
+Libro combos 5
+ConPesRathianRsa
+EscRathianRsaGr
+Espina Rathian
+ConPesRthlsCel
+CorRathianDorPes
+EspRathianDor
+EscRathianCielo
+ConPesRthlsGris
+EscLao-ShanCielo
+ConPesFatalisCar
+CueFatalisCarDu
+EscGrFatalisBl
+CuernFatalisBlDu
+Piel de Giadrome
+Bolsa de veneno
+Piel de Conga
+Con. Hermit. pq.
+Colmillo Piscine
+Esc. Kut-Ku azul
+Columna Monoblos
+Escama de Garuga
+Ala de Garuga
+Colmillo Tigrex
+Garra de Tigrex
+Cincha Rathalos
+Concha Rathalos
+Columna Diablos
+Piel de Iodrome
+Colum. Blos n.
+Moneda Blangonga
+Tick. alma cazd.
+Carne caliente
+Piel de Remobra
+Hiedra
+Arrowana revent.
+ColPesLavasioth
+Cincha de Daora
+Concha Lao-Shan
+Crin de Teostra
+Corazón Monoblos
+Garra Wyv. fuego
+Garra Hypno+
+Hypno Bezoar
+Escama Garuga+
+Piel Narga ngr
+Colm. Nargacuga+
+Caparazón Tigrex
+Capar. Rathalos
+Tórax de Diablos
+Bolsa somní­fera
+Tórax Blos n.
+(dummy)Famitsu Invoice
+Ticket cazador
+Escama Tigrex +
+Méd. Wyv. fuego
+Capar. Lao-Shan
+Concha Fatalis
+Colm. de Akantor
+Seta picante
+Atún gastrónomo
+Esc. Rthls. ce+
+Esc. Rthls. pl.+
+Cola de Lunastra
+Con. Ca. Fatalis
+Con. Fatalis bl.
+HuesoWyvernRobus
+Bolsa ven mortal
+Esc. Garuga grsa
+Ala Garuga frte
+Hueso masivo
+Piel Narga ngr+
+ColPesNargacuga
+ConPesTigrex
+ColPesTigrex
+ConPesRathalos
+EspPesDiablos
+Bolsa de coma
+EscGrKut-KuAzul
+PeloBullfangoGr
+CueroPielPelagus
+EspPesBlosNeg
+ConGraviosNgCiel
+(dummy)FamitsuSpcialTkt
+MonedaCintNg G
+TcktMarionetaEsp
+GarraRajangDura
+ColPesRajang
+Ala Daora dura
+CueroColaKirinTr
+Púa Lunastra
+ConPesTeostra
+Filt YamaTsukami
+ConPesFatalis
+Ala dura Fatalis
+MandPalaUkanlos
+SubEscUkanlos
+EscRathCelGr
+EscRathalosPlGr
+EscFatalisCarGr
+ConFatalisBlDur
+Colmillo Genprey
+Colmillo Ioprey
+Cola de Garuga
+Pinz. Ceanataur
+Cola de Rathalos
+Garra Giadrome
+G. Velocidrome
+Moneda Plesioth
+Mon. Cephadrome
+Planta de savia
+Nutrientes
+Garra Chameleos
+Garra de Daora
+Pinzas de Gaoren
+Concha Teostra
+Garra dr. fuego
+Cola Rthls. ce.
+G. Velocidrome+
+Abdomen Vespoid
+Cola Blangonga
+Cola de Rajang
+Bolsa de trueno
+Púa de Chameleos
+Garra afil Daora
+Moneda Gravios
+Megapiel armad.
+Cola Rthls. pl.
+Ala Ca. Fatalis
+Cin. Fatalis bl.
+CuerolColaGaruga
+CueroColaBlango
+PataCeanataurPes
+EscTigrexGr
+ConGraviosCielo
+Bolsa de rayo
+CuerColBlangCobr
+GarraDuraGaoren
+GarDragónFuegoDu
+Piel YamaTsukami
+GarraCavUkanlos
+ColaPielRathPl
+AlaFatalisCarDu
+AlaFatalisBlFuer
+H. monstr. med.
+Colm. Congalala
+Carne frí­a
+Piel de armadura
+Extracto pálido
+Gran mariquita
+Cola Chameleos
+Cuerno Lunastra
+Cásc. hueso gr.
+Colm. Bulldrome
+Ala cuch. Narga
+Garra de Gaoren
+Púa de Akantor
+Baya congelada
+GrraDuraWyvFuego
+AlaCuchNargaFrte
+ColmlloPelagusLg
+CueroColaChamele
+ColaPesUkanlos
+EscLao-ShanPes
+Pata Ceanataur
+Tesoro Shakalaka
+Hierba antí­doto
+Inmunizador
+Atún glotón
+Megadroga demon.
+(dummy)Famitsu PT Tckt
+Heren. Shakalaka
+Cola Kirin true.
+Poción máx.
+Rubí­ Lao-Shan
+ConGranLangosta
+AlaChameleosDura
+Semilla de poder
+Joya de Suiko
+Droga demoníaca
+Joya de Akito
+Joya lapislázuli
+Joya campo bat.
+Cor. Reina Vesp.
+Medicina herbal
+Bicho amargo
+Bebida energét.
+Píldora de poder
+Colm. Blangonga
+Cola Blos negra
+Pico espléndido
+Pez estruendoso
+Garra Congalala
+Disp. normal Nv3
+Disp. perf. Nv3
+D. perdigón Nv3
+Disp. expl. Nv3
+Disp. grupo Nv3
+Revest. energí a
+Revest. c.dist.
+Revest. veneno
+Revest. parál.
+Revest. sueño
+Madera dragón +
+Cuerno de Kelbi
+Trampa choque
+Filete al punto
+Filete gourmet
+Carne tostada
+Megazumo
+Cola de Daora
+Gran conc. Lang.
+Rana con cola
+Vid Felyne
+Catalizador
+Ala cuch. Vesp.
+Extracto poder
+Hierba de fuego
+Semilla dragón
+Disp. dragón
+Ala cuch. Horn.
+Nitroseta
+Salta bichos
+Boomerang
+Flauta
+Seta excitante
+Megapico
+Megarred bichos
+TesoroShakalaka+
+Red
+Herram. trampa
+Huevo de acero
+Huevo de oro
+Grillo
+Bicho ñame
+Psicosuero
+Prismáticos
+Miel
+Flauta de Salud
+Pólvora
+Tiquet Camarada
