--- a/gu/data/languages/skills.csv
+++ b/gu/data/languages/skills.csv
@@ -210,13 +210,13 @@ Negate Paralysis;;;;;麻痺無効;
 Double Paralysis;;;;;麻痺倍加;
 Negate Sleep;;;;;睡眠無効;
 Double Sleep;;;;;睡眠倍加;
-Negate Stun;;;;;気絶確率半減;
-Halve Stun;;;;;気絶無効;
+Negate Stun;;;;;気絶無効;
+Halve Stun;;;;;気絶確率半減;
 Double Stun;;;;;気絶倍加;
-HG Earplugs;;;;;耳栓;
-Earplugs;;;;;高級耳栓;
-Windproof (Hi);;;;;風圧【小】無効;
-Windproof (Lo);;;;;風圧【大】無効;
+HG Earplugs;;;;;高級耳栓;
+Earplugs;;;;;耳栓;
+Windproof (Hi);;;;;風圧【大】無効;
+Windproof (Lo);;;;;風圧【小】無効;
 Tremor Res;;;;;耐震;
 Negate Bind;;;;;だるま無効;
 Heat Cancel;;;;;暑さ無効;
@@ -228,66 +228,66 @@ Tropic Hunter;;;;;南風の狩人;
 Anti-Theft;;;;;盗み無効;
 Iron Skin;;;;;鉄面皮;
 Antivirus;;;;;無我の境地;
-Bio Master;;;;;細菌研究家;
-Bio Researcher;;;;;バイオドクター;
+Bio Master;;;;;バイオドクター;
+Bio Researcher;;;;;細菌研究家;
 Negate Bleeding;;;;;裂傷無効;
 Double Bleeding;;;;;裂傷倍加;
-Attack Up (L);;;;;攻撃力UP【小】;
+Attack Up (L);;;;;攻撃力UP【大】;
 Attack Up (M);;;;;攻撃力UP【中】;
-Attack Up (S);;;;;攻撃力UP【大】;
+Attack Up (S);;;;;攻撃力UP【小】;
 Attack Down (S);;;;;攻撃力DOWN【小】;
 Attack Down (M);;;;;攻撃力DOWN【中】;
 Attack Down (L);;;;;攻撃力DOWN【大】;
-Defense Up (L);;;;;防御力UP【小】;
+Defense Up (L);;;;;防御力UP【大】;
 Defense Up (M);;;;;防御力UP【中】;
-Defense Up (S);;;;;防御力UP【大】;
+Defense Up (S);;;;;防御力UP【小】;
 Defense Down (S);;;;;防御力DOWN【小】;
 Defense Down (M);;;;;防御力DOWN【中】;
 Defense Down (L);;;;;防御力DOWN【大】;
-Health +50;;;;;体力+20;
-Health +20;;;;;体力+50;
+Health +50;;;;;体力+50;
+Health +20;;;;;体力+20;
 Health -10;;;;;体力-10;
 Health -30;;;;;体力-30;
-Fire Res +20;;;;;火耐性【小】;
-Fire Res +15;;;;;火耐性【大】;
+Fire Res +20;;;;;火耐性【大】;
+Fire Res +15;;;;;火耐性【小】;
 Fire Res -20;;;;;火耐性弱化;
-Water Res +20;;;;;水耐性【小】;
-Water Res +15;;;;;水耐性【大】;
+Water Res +20;;;;;水耐性【大】;
+Water Res +15;;;;;水耐性【小】;
 Water Res -20;;;;;水耐性弱化;
-Thunder Res +20;;;;;雷耐性【小】;
-Thunder Res +15;;;;;雷耐性【大】;
+Thunder Res +20;;;;;雷耐性【大】;
+Thunder Res +15;;;;;雷耐性【小】;
 Thunder Res -20;;;;;雷耐性弱化;
-Ice Res +20;;;;;氷耐性【小】;
-Ice Res +15;;;;;氷耐性【大】;
+Ice Res +20;;;;;氷耐性【大】;
+Ice Res +15;;;;;氷耐性【小】;
 Ice Res -20;;;;;氷耐性弱化;
-Dragon Res +20;;;;;龍耐性【小】;
-Dragon Res +15;;;;;龍耐性【大】;
+Dragon Res +20;;;;;龍耐性【大】;
+Dragon Res +15;;;;;龍耐性【小】;
 Dragon Res -20;;;;;龍耐性弱化;
 Blightproof;;;;;属性やられ無効;
-Fire Atk +2;;;;;火属性攻撃強化+1;
-Fire Atk +1;;;;;火属性攻撃強化+2;
+Fire Atk +2;;;;;火属性攻撃強化+2;
+Fire Atk +1;;;;;火属性攻撃強化+1;
 Fire Atk Down;;;;;火属性攻撃弱化;
-Water Atk +2;;;;;水属性攻撃強化+1;
-Water Atk +1;;;;;水属性攻撃強化+2;
+Water Atk +2;;;;;水属性攻撃強化+2;
+Water Atk +1;;;;;水属性攻撃強化+1;
 Water Atk Down;;;;;水属性攻撃弱化;
-Thunder Atk +2;;;;;雷属性攻撃強化+1;
-Thunder Atk +1;;;;;雷属性攻撃強化+2;
+Thunder Atk +2;;;;;雷属性攻撃強化+2;
+Thunder Atk +1;;;;;雷属性攻撃強化+1;
 Thunder Atk Down;;;;;雷属性攻撃弱化;
-Ice Atk +2;;;;;氷属性攻撃強化+1;
-Ice Atk +1;;;;;氷属性攻撃強化+2;
+Ice Atk +2;;;;;氷属性攻撃強化+2;
+Ice Atk +1;;;;;氷属性攻撃強化+1;
 Ice Atk Down;;;;;氷属性攻撃弱化;
-Dragon Atk +2;;;;;龍属性攻撃強化+1;
-Dragon Atk +1;;;;;龍属性攻撃強化+2;
+Dragon Atk +2;;;;;龍属性攻撃強化+2;
+Dragon Atk +1;;;;;龍属性攻撃強化+1;
 Dragon Atk Down;;;;;龍属性攻撃弱化;
 Element Atk Up;;;;;属性攻撃強化;
 Element Atk Down;;;;;属性攻撃弱化;
-Status Atk +2;;;;;状態異常攻撃+1;
-Status Atk +1;;;;;状態異常攻撃+2;
+Status Atk +2;;;;;状態異常攻撃+2;
+Status Atk +1;;;;;状態異常攻撃+1;
 Status Atk Down;;;;;状態異常攻撃弱化;
 Speed Sharpening;;;;;砥石使用高速化;
 Slow Sharpening;;;;;砥石使用低速化;
-Sharpness +2;;;;;斬れ味レベル+1;
-Sharpness +1;;;;;斬れ味レベル+2;
+Sharpness +2;;;;;斬れ味レベル+2;
+Sharpness +1;;;;;斬れ味レベル+1;
 Razor Sharp;;;;;業物;
 Blunt Edge;;;;;なまくら;
 Mind's Eye;;;;;心眼;
@@ -299,20 +299,20 @@ Punishing Draw;;;;;抜刀術【力】;
 Quick Sheath;;;;;納刀術;
 Challenge Sheath;;;;;挑戦者の納刀;
 Bladescale Hone;;;;;刃鱗磨き;
-Reload Speed +3;;;;;装填速度+1;
+Reload Speed +3;;;;;装填速度+3;
 Reload Speed +2;;;;;装填速度+2;
-Reload Speed +1;;;;;装填速度+3;
+Reload Speed +1;;;;;装填速度+1;
 Reload Speed -1;;;;;装填速度-1;
 Reload Speed -2;;;;;装填速度-2;
 Reload Speed -3;;;;;装填速度-3;
-Recoil Down +3;;;;;反動軽減+1;
+Recoil Down +3;;;;;反動軽減+3;
 Recoil Down +2;;;;;反動軽減+2;
-Recoil Down +1;;;;;反動軽減+3;
+Recoil Down +1;;;;;反動軽減+1;
 Recoil Down -1;;;;;反動軽減-1;
 Recoil Down -2;;;;;反動軽減-2;
 Recoil Down -3;;;;;反動軽減-3;
-Steadiness +2;;;;;ブレ抑制+1;
-Steadiness +1;;;;;ブレ抑制+2;
+Steadiness +2;;;;;ブレ抑制+2;
+Steadiness +1;;;;;ブレ抑制+1;
 Steadiness -1;;;;;ブレ抑制-1;
 Steadiness -2;;;;;ブレ抑制-2;
 Normal/Rapid Up;;;;;通常弾・連射矢UP;
@@ -320,21 +320,21 @@ Pierce/Pierce Up;;;;;貫通弾・貫通矢UP;
 Pellet/Spread Up;;;;;散弾・拡散矢UP;
 Heavy/Heavy Up;;;;;重撃弾・重射矢UP;
 Use Any Normal S;;;;;通常弾全LV追加;
-Use Any Pierce S;;;;;貫通弾LV1追加;
-Use Lv1 Pierce S;;;;;貫通弾全LV追加;
-Use Any Pellet S;;;;;散弾LV1追加;
-Use Lv1 Pellet S;;;;;散弾全LV追加;
-Use Any Crag S;;;;;徹甲榴弾LV1追加;
-Use Lv1 Crag S;;;;;徹甲榴弾全LV追加;
-Use Any Clust S;;;;;拡散弾LV1追加;
-Use Lv1 Clust S;;;;;拡散弾全LV追加;
+Use Any Pierce S;;;;;貫通弾全LV追加;
+Use Lv1 Pierce S;;;;;貫通弾LV1追加;
+Use Any Pellet S;;;;;散弾全LV追加;
+Use Lv1 Pellet S;;;;;散弾LV1追加;
+Use Any Crag S;;;;;徹甲榴弾全LV追加;
+Use Lv1 Crag S;;;;;徹甲榴弾LV1追加;
+Use Any Clust S;;;;;拡散弾全LV追加;
+Use Lv1 Clust S;;;;;拡散弾LV1追加;
 Use Poison Coat;;;;;毒ビン追加;
 Use Para Coat;;;;;麻痺ビン追加;
 Use Sleep Coat;;;;;睡眠ビン追加;
-Power Phial (All);;;;;強撃ビンLV1追加;
-Power Phial (Lv1);;;;;強撃ビン全LV追加;
-Element Phial (All);;;;;属強ビンLV1追加;
-Element Phial (Lv1);;;;;属強ビン全LV追加;
+Power Phial (All);;;;;強撃ビン全LV追加;
+Power Phial (Lv1);;;;;強撃ビンLV1追加;
+Element Phial (All);;;;;属強ビン全LV追加;
+Element Phial (Lv1);;;;;属強ビンLV1追加;
 Use C.Range Coat;;;;;接撃ビン追加;
 Use Exhaust Coat;;;;;減気ビン追加;
 Use Blast Coat;;;;;爆破ビン追加;
@@ -343,9 +343,9 @@ Shot Booster;;;;;弾導強化;
 Load Up;;;;;装填数UP;
 TrueShot Up;;;;;特定射撃強化;
 Ammo Saver;;;;;弾薬節約;
-Critical Eye +3;;;;;見切り+1;
+Critical Eye +3;;;;;見切り+3;
 Critical Eye +2;;;;;見切り+2;
-Critical Eye +1;;;;;見切り+3;
+Critical Eye +1;;;;;見切り+1;
 Critical Eye -1;;;;;見切り-1;
 Critical Eye -2;;;;;見切り-2;
 Critical Eye -3;;;;;見切り-3;
@@ -359,38 +359,38 @@ Focus;;;;;集中;
 Distraction;;;;;雑念;
 Marathon Runner;;;;;ランナー;
 Short Sprinter;;;;;鈍足;
-Constitution +2;;;;;体術+1;
-Constitution +1;;;;;体術+2;
+Constitution +2;;;;;体術+2;
+Constitution +1;;;;;体術+1;
 Constitution -1;;;;;体術-1;
 Constitution -2;;;;;体術-2;
 Stam Recov Up;;;;;スタミナ急速回復;
 Stam Recov Down;;;;;スタミナ回復遅延;
 Endurance Runner;;;;;キープラン;
-Evasion +2;;;;;回避性能+1;
-Evasion +1;;;;;回避性能+2;
+Evasion +2;;;;;回避性能+2;
+Evasion +1;;;;;回避性能+1;
 Evasion Down;;;;;回避性能DOWN;
 Evade Extender;;;;;回避距離UP;
 Bubbly Dance;;;;;泡沫の舞;
-Guard +2;;;;;ガード性能+1;
-Guard +1;;;;;ガード性能+2;
+Guard +2;;;;;ガード性能+2;
+Guard +1;;;;;ガード性能+1;
 Guard -1;;;;;ガード性能-1;
 Guard Up;;;;;ガード強化;
 Knockout King;;;;;KO術;
 Stamina Thief;;;;;スタミナ奪取;
 Horn Maestro;;;;;笛吹き名人;
-Artillery Expert;;;;;砲術師;
-Artillery Novice;;;;;砲術王;
+Artillery Expert;;;;;砲術王;
+Artillery Novice;;;;;砲術師;
 Partbreaker;;;;;破壊王;
 Bombardier;;;;;ボマー;
-Latent Power +2;;;;;力の解放+1;
-Latent Power +1;;;;;力の解放+2;
-Challenger +2;;;;;挑戦者+1;
-Challenger +1;;;;;挑戦者+2;
+Latent Power +2;;;;;力の解放+2;
+Latent Power +1;;;;;力の解放+1;
+Challenger +2;;;;;挑戦者+2;
+Challenger +1;;;;;挑戦者+1;
 Peak Performance;;;;;フルチャージ;
 Trump Card;;;;;切り札;
 Dragonheart;;;;;龍気活性;
-Adrenaline +2;;;;;火事場力+1;
-Adrenaline +1;;;;;火事場力+2;
+Adrenaline +2;;;;;火事場力+2;
+Adrenaline +1;;;;;火事場力+1;
 Worrywart;;;;;心配性;
 Fortify;;;;;不屈;
 Resentment;;;;;逆恨み;
@@ -406,8 +406,8 @@ Airborne;;;;;飛燕;
 Composed;;;;;明鏡止水;
 Chance Seizer;;;;;虎視眈々;
 Longer SP;;;;;ＳＰ時間延長;
-Autotracker;;;;;探知;
-Detect;;;;;自動マーキング;
+Autotracker;;;;;自動マーキング;
+Detect;;;;;探知;
 Capture Guru;;;;;捕獲の見極め;
 Outdoorsman;;;;;ハンター生活;
 Pro Transporter;;;;;運搬の達人;
@@ -416,53 +416,53 @@ Demonic Blessing;;;;;悪霊の加護;
 Hero's Talisman;;;;;英雄の護り;
 Recovery Up;;;;;体力回復量UP;
 Recovery Down;;;;;体力回復量DOWN;
-Recovery Spd +2;;;;;回復速度+1;
-Recovery Spd +1;;;;;回復速度+2;
+Recovery Spd +2;;;;;回復速度+2;
+Recovery Spd +1;;;;;回復速度+1;
 Recovery Spd -1;;;;;回復速度-1;
 Recovery Spd -2;;;;;回復速度-2;
 Item Use Up;;;;;アイテム使用強化;
 Item Use Down;;;;;アイテム使用弱化;
-Wide-Range +2;;;;;広域化+1;
-Wide-Range +1;;;;;広域化+2;
-Negate Hunger;;;;;腹減り半減;
-Halve Hunger;;;;;腹減り無効;
+Wide-Range +2;;;;;広域化+2;
+Wide-Range +1;;;;;広域化+1;
+Negate Hunger;;;;;腹減り無効;
+Halve Hunger;;;;;腹減り半減;
 Raise Hunger;;;;;腹減り倍加【小】;
 Double Hunger;;;;;腹減り倍加【大】;
-Scavenger;;;;;まんぷく;
-Gourmand;;;;;拾い食い;
-Speed Eating +2;;;;;早食い+1;
-Speed Eating +1;;;;;早食い+2;
+Scavenger;;;;;拾い食い;
+Gourmand;;;;;まんぷく;
+Speed Eating +2;;;;;早食い+2;
+Speed Eating +1;;;;;早食い+1;
 Slow Eater;;;;;スローライフ;
 Rationer;;;;;満足感;
 Meat Lover;;;;;お肉大好き;
 Mushromancer;;;;;キノコ大好き;
-Pro Herbology;;;;;薬草強化;
-Herbology;;;;;薬草超強化;
-Combination +45%;;;;;調合成功率+20%;
-Combination +20%;;;;;調合成功率+45%;
+Pro Herbology;;;;;薬草超強化;
+Herbology;;;;;薬草強化;
+Combination +45%;;;;;調合成功率+45%;
+Combination +20%;;;;;調合成功率+20%;
 Combination -10%;;;;;調合成功率-10%;
 Combination -20%;;;;;調合成功率-20%;
 Combination Pro;;;;;最大数生産;
 Trap Master;;;;;罠師;
-Gathering +2;;;;;採取+1;
-Gathering +1;;;;;採取+2;
+Gathering +2;;;;;採取+2;
+Gathering +1;;;;;採取+1;
 Gathering -1;;;;;採取-1;
 Honey Hunter;;;;;ハニーハンター;
-Charm Chaser;;;;;お守り収集;
-Charm Collector;;;;;お守りハンター;
-Divine Whim;;;;;精霊の気まぐれ;
-Spirit's Whim;;;;;神の気まぐれ;
+Charm Chaser;;;;;お守りハンター;
+Charm Collector;;;;;お守り収集;
+Divine Whim;;;;;神の気まぐれ;
+Spirit's Whim;;;;;精霊の気まぐれ;
 Spectre's Whim;;;;;悪霊の気まぐれ;
 Devil's Whim;;;;;悪魔の気まぐれ;
-Miraculous Luck;;;;;幸運;
-Great Luck;;;;;強運;
+Miraculous Luck;;;;;強運;
+Great Luck;;;;;幸運;
 Good Luck;;;;;激運;
 Bad Luck;;;;;不運;
 Horrible Luck;;;;;災難;
-Carving Celebrity;;;;;剥ぎ取り鉄人;
-Carving Pro;;;;;剥ぎ取り名人;
-Capture Master;;;;;捕獲達人;
-Capture Expert;;;;;捕獲名人;
+Carving Celebrity;;;;;剥ぎ取り名人;
+Carving Pro;;;;;剥ぎ取り鉄人;
+Capture Master;;;;;捕獲名人;
+Capture Expert;;;;;捕獲達人;
 Soul of Bherna;;;;;ベルナの心;
 Soul of Kokoto;;;;;ココットの心;
 Soul of Pokke;;;;;ポッケの心;
